--- a/k8s/笔记/存储.md
+++ b/k8s/笔记/存储.md
@@ -39,6 +39,8 @@ ETL
 ## SCSI协议
 
 https://www.jianshu.com/p/c890e3ad9c07
+虽然SCSI控制器可以连接多个存储设备，形成自己的网络，但是它只能与直接相连的存储设备进行通信，只能在在局域网内部使用，不能再以太网上共享。
+
 
 总线是计算机与存储系统间通讯的主要通道，是源设备到目标设备的传输路径
 SCSI接口是一种用于计算机与周边设备通讯的接口。如上图，SCSI总线上数据操作和管理都是由SCSI的控制器进行控制，SCSI控制器可以看作是一块小型CPU，它有自己的命令集和缓存。上图的SCSI结构可以对计算机中连接到SCSI总线上的多个设备动态分工操作，灵活分配资源
@@ -83,6 +85,66 @@ SCSI协议寻址
 设备号（SCSI ID）：用于识别某一总线上的每一个存储设备。
 逻辑单元号（LUN ID）：识别某存储设备上的每一个子设备。子设备包括虚拟磁盘、磁带驱动器等。利用逻辑单元号可以对存储设备中的每一个子设备进行寻址。
 
+## iSCSI
+iSCSI协议是一种新的存储技术，它是将SCSI接口与以太网（Ethernet）技术结合起来工作的，简单的说iSCSI协议是将用户的请求转换成SCSI规则编码，然后再将这些数据封装在IP包中以便在以太网中进行传输的协议。
+2.1 iSCSI协议的功能
+iSCSI:internet Small Computer System  Interface的缩写，即Internet小型计算机接口。iSCSI技术是一种由IBM公司研究开发的，是一个供硬件设备使用的可以在IP协议的上层运行的SCSI指令集，这种指令集合可以实现在IP网络上运行 SCSI协议，使其能够在诸如高速千兆以太网上进行路由选择。它是基于TCP/IP协议的，用来建立和管理IP存储设备、主机和客户机之间的相互连接，并创建SAN。这样使得SAN利用SCSI协议应用在高速数据传输网络成为可能。这种传输是以块级别的方式在各个存储设备上进行的。
+
+2.2 iSCSI的结构
+由于SCSI协议是一个C/S架构，因此iSCSI协议也是一个C/S结构，其中client是initiator,server端为target。iSCSI协议的主要功能是利用TCP/IP网络，在主机系统（可称为initiator）和目标存储设备（称为target）之间进行大量的数据封装和可靠传输过程。此外，iSCSI协议还将SCSI协议封装在IP网络上，并且运行在TCP上。
+2.3 iSCSI协议的工作原理
+当iSCSI主机发起数据读写操作后，操作系统会生成一个SCSI指令集，然后该SCSI指令集在iSCSI initiator端被封装成iSCSI消息包，并通过TCP/IP网络传输到存储区域，当存储区域的iSCSI target收到iSCSI消息包时会将其解开，读取其中的SCSI指令，然后再将其SCSI指令传送给SCSI设备执行其指令。当SCSI指令被执行后，返回的数据经过SCSI设备传送给iSCSI target时被封装为iSCSI的响应PDU，然后再通过TCP/IP网络传输给iSCSI initiator端，iSCSI initiator解开其iSCSI PDU包，读取其中的SCSI响应内容，并将其提交给操作系统进行处理，然后操作系统在将其处理后的内容返回给应用程序。
+2.4 iSCSI的优点
+iSCSI最大的优点就是节约成本，利用iSCSI协议构建一个存储网络，除了需要存储设备，交换机、线缆还有以太网接口以外，基本就不需要其他的设备了，只需要在现有的网络上安装iSCSI就可以实现构建一个比较大的存储网络了。
+
+2.5 iSCSI基本概念
+iSCSI客户端 (iSCSI Initiator)
+iSCSI客户端为iSCSI initiator，这是I/O操作的发起者。在RedHat Linux系统中可以通过软件来模拟，需要安装iSCSI设备驱动。如iscsi-initiator-utils.rpm
+iSCSI  initiator具有的特性：
+a) 既然是I/O操作的发起者，需要通过发现过程请求远端快设备。
+b) 它可以与target进行持久连接
+c) Linux中可以通过软件方式来实现
+
+iSCSI服务器端 (iSCSI Target)
+iSCSI服务器端为iSCSI target，这是I/O操作的执行者。在RedHat Enterprise Linux中可以使用scsi-target-utils软件包来模拟实现。
+iSCSI target端具有的特性：
+a) 需要导出一个或多个块设备供启动者（initiator）使用
+b) 可以通过硬件和软件的方式来实现
+
+iSCSI target设备名称
+iSCSI target名称必须是全球唯一的，其格式为：
+
+iqn.<yyyy-mm>.<tld.domain.some.host>[:<identifier>]
+ 
+# iqn：iSCSI target名称必须是以iqn开头的
+# yyyy-mm：表示的是时间
+# tld.domain.some.host：这个表示的是一个反过来写的域名
+# identifier：这个可以是任意字符串
+# 如：iqn.2015-03.com.xsl.www:storge.disk1
+逻辑单元号LUN
+LUN ID由iSCSI目标设备（Target）分配。iSCSI 启动端（Initiator）设备当前支持在每个目标设备（Target）中导出最多256个LUN。即最大支持16个target。
+对于LUN，比较通俗的理解就是磁盘分区、LVM卷组、RAID等等。
+
+Target 即“储存设备”（Storage Device），也就是存放数据的硬盘（以硬盘阵列居多）。在使用iSCSI时，会在 iSCSI 储存设备上去建立 LUN（Logical Unit Number）来提供给具备 iSCSI Initiator 功能的主机来存取 数据的。LUN 好比是个“逻辑单位磁碟”，物理上通常是由数个实体磁碟（ RAID 或 LVM 技术的技术实现）所组成。
+
+2.6 iSCSI的发现机制
+iSCSI发起端为了和iSCSI目标端建立iSCSI会话，initiator需要知道target的 IP地址，TCP端口号和名字 三个信息。iSCSI发现的目的是为了让iSCSI发起端获取一条到iSCSI目标端的通路。iSCSI有三种发现机制：
+
+a. 静态配置
+在iSCSI发起端已经知道iSCSI目标端的IP地址TCP端口号和名字信息时，iSCSI发起端不需要执行发现。iSCSI发起端直接通过IP地址和TCP端口来建立TCP连接，使用iSCSI目标端的名字来建立iSCSI会话。这种发现机制比较适合比较小的iSCSI体系结构
+
+b. SendTarget发现
+在iSCSI发起端知道iSCSI目标端的IP地址和TCP端口的情况下，iSCSI使用IP地址和TCP端口号建立TCP连接后建立发现对话。iSCSI发起端发送SendTarget命令查询网络中的存在的iSCSI信息。这种方法主要用于网关设备，iSCSI发起端被静态配置连接到指定的iSCSI设备。iSCSI发起端和iSCSI网关设备建立对话并发送SendTarget请求给iSCSI网关设备。iSCSI网关设备返回一系列和它相连的ISCSI目标端的信息。iSCSI发起端选择一个目标端来建立对话。
+
+c. 零配置发现
+这种机制用于iSCSI发送设备完全不知道iSCSI目标端的信息的情况下。iSCSI发起端利用现有的IP网络协议SLP（Service Location Protocol for Discovery,服务定位协议）。iSCSI目标端使用SLP来注册，iSCSI发起端可以通过查询SLP代理来获得注册的iSCSI目标端的信息。当iSCSI目标端加入到网络中的时候，拓扑结构也随之改变。虽然这种方法增加了实现的复杂性，但它不需要重新配置发起端即可找到新的目标端。
+
+## SmartMigration
+
+
+## 常用存储高级技术【精简配置、存储分层、缓存分区、快照、文件系统配额管理】
+### 精简配置(smartThin)技术
+https://blog.csdn.net/cuichongxin/article/details/113921396
 
 
 ## 数据与信息
