--- a/k8s/笔记/存储.md
+++ b/k8s/笔记/存储.md
@@ -25,6 +25,11 @@ FusionStorage采用的就是DHT算法，具有以下特点：
 ETL
 　　是英文Extract-Transform-Load的缩写，用来描述将数据从来源端经过抽取（extract）、转换（transform）、加载（load）至目的端的过程。
 
+
+Zonging
+
+1.一个设备可以在多个zong
+
 ## 结构化数据与非结构化数据
 
 　　结构化数据也称作行数据，是由二维表结构来逻辑表达和实现的数据，严格地遵循数据格式与长度规范，主要通过关系型数据库进行存储和管理。
