--- a/k8s/笔记/存储.md
+++ b/k8s/笔记/存储.md
@@ -145,6 +145,28 @@ c. 零配置发现
 这种机制用于iSCSI发送设备完全不知道iSCSI目标端的信息的情况下。iSCSI发起端利用现有的IP网络协议SLP（Service Location Protocol for Discovery,服务定位协议）。iSCSI目标端使用SLP来注册，iSCSI发起端可以通过查询SLP代理来获得注册的iSCSI目标端的信息。当iSCSI目标端加入到网络中的时候，拓扑结构也随之改变。虽然这种方法增加了实现的复杂性，但它不需要重新配置发起端即可找到新的目标端。
 
 ## SmartMigration
+## SmartThin
+不会中断业务
+
+读数据：
+1.接到lun读请求
+2.查询lun 与 pool 映射表
+3.查询已分配空间
+
+## SmartTier
+数据迁移：提供数据迁移时段
+
+迁移粒度：迁移粒度越越快
+## SmartQos
+流量控制 基于令牌分配技术
+一个扇区对应一个令牌
+## SmartDedupe
+1.先分块
+2.计算指纹信息
+
+
+在线重删原理
+后处理相似重删
 
 
 ## 常用存储高级技术【精简配置、存储分层、缓存分区、快照、文件系统配额管理】
