--- a/k8s/笔记/存储.md
+++ b/k8s/笔记/存储.md
@@ -389,9 +389,27 @@ Extent/Grain
         Extent一般组成单位是4MB
         将Extent切为密度更小的Grain组成LUN，此LUN更为精简LUN，支持精简置备（SmartThin）
 
+## RDMA
 
-# RoCE、iWARP、IB和TCP
+在分布式存储网络中，我们使用的协议有RoCE、Infiniband（IB）和TCP/IP。其中RoCE和IB属于RDMA(RemoteDirect Memory Access)技术
+
+### RDMA的种类	
+
+目前有三种RDMA网络，分别是Infiniband、RoCE(RDMA over Converged Ethernet)、iWARP。
+
+### Infiniband
+
+Infiniband是一种专为RDMA设计的网络，从硬件级别保证可靠传输 ，技术先进，但是成本高昂。
+
+ 而RoCE 和 iWARP都是基于以太网的RDMA技术，这使高速、超低延时、极低CPU使用率的RDMA技术得以部署在目前使用最广泛的以太网上。是一种专为RDMA设计的网络，从硬件级别保证可靠传输 ，技术先进，但是成本高昂。 而RoCE 和 iWARP都是基于以太网的RDMA技术，这使高速、超低延时、极低CPU使用率的RDMA技术得以部署在目前使用最广泛的以太网上。
+
+### RoCE、iWARP、IB和TCP
+
 https://blog.csdn.net/u012158332/article/details/125334200
+
+
+
+
 
 
 # 存储快照
