--- a/k8s/笔记/存储.md
+++ b/k8s/笔记/存储.md
@@ -413,9 +413,16 @@ Infiniband是一种专为RDMA设计的网络，从硬件级别保证可靠传输
 
 https://blog.csdn.net/u012158332/article/details/125334200
 
+|        | InfiniBand | iWARP             | RoCE             |
+| ------ | ---------- | ----------------- | ---------------- |
+| 性能   | 最好       | 稍差（受TCP影响） | 与InfiniBand相当 |
+| 成本   | 高         | 中                | 低               |
+| 稳定性 | 好         | 差                | 较好             |
+| 交换机 | IB交换机   | 以太网交换机      | 以太网交换机     |
 
-
-
+- InfiniBand：设计之初就考虑了 RDMA，从硬件级别保证可靠传输，提供更高的带宽和更低的时延。但是成本高，需要支持IB网卡和交换机。
+- RoCE：基于 Ethernet 做 RDMA，消耗的资源比 iWARP 少，支持的特性比 iWARP 多。可以使用普通的以太网交换机，但是需要支持RoCE的网卡。
+- iWARP：基于TCP的RDMA网络，利用TCP达到可靠传输。相比RoCE，在大型组网的情况下，iWARP的大量TCP连接会占用大量的内存资源，对系统规格要求更高。可以使用普通的以太网交换机，但是需要支持iWARP的网卡
 
 
 # 存储快照
