--- a/k8s/笔记/存储.md
+++ b/k8s/笔记/存储.md
@@ -214,9 +214,23 @@ RAID 的初衷是为大型服务器提供高端的存储功能和冗余的数据
 
 - 条带（strip）：硬盘中单个或者多个连续的扇区构成一个条带，他是一块硬盘上进一次数据读写的最小单元，它是组成分条的元素。
 
-- 分条：一组条带组成分条
+- 分条： 把多个条带组合成分条。
 
   ![](images\tiaodai.jpeg)
+
+  分条宽度
+  分条宽度（stripe width）是指同时可以并发读或写的条带数量。这个数量等于RAID中的物理硬盘数量。例如一个经过条带化的，具有4块物理硬盘的阵列的分条宽度就是4。增加分条宽度，可以增加阵列的读写性能。增加更多的硬盘，也就增加了可以同时并发读或写的条带数量。在其他条件一样的前提下，一个由8块18G 硬盘组成的阵列相比一个由4块36G硬盘组成的阵列具有更高的传输性能。
+
+   
+
+  分条深度（RAID 1.0可以手工设置）
+  分条深度指单块物理硬盘的条带的大小，也叫条带大小或分条单元大小。有时也被叫做block size, chunk size, stripe length 或者 granularity。这个参数指的是写在每块磁盘上的条带数据块的大小。RAID的数据块大小一般在2KB到512KB之间(或者更大)，其数值是2 的次方，即2KB,4KB,8KB,16KB这样。
+
+  分条深度作用
+  如果分条深度太小，很有可能出现一个IO横跨了两个甚至多个分条单元的情况，随着分条深度的增大，一个IO跨盘的机率逐渐减小，因此随机写IOPS呈现逐渐上升的趋势。
+
+  当分条深度的大小能够超过数据块的大小达到一定程度时，由于再出现IO数据块跨盘的情况的机率已经非常小了，则数据块的大小已经不在是影响性能的关键因素，此时，大IO读写性能会基本保持一个稳定的水平
+
 
 ## RAID数据保护的方式
 
@@ -282,7 +296,13 @@ https://zhuanlan.zhihu.com/p/506835089
 
 （4）两协议都需要文件格式转换，NFS保留了unix的文件格式特性，如所有人、组等等；CIFS则完全按照win的风格来作。
 
-
+CIFS
+CIFS（Common Internet File System，公共互联网文件系统）是当前主流异构平台共享文件系统之一，由Microsoft公司开发，主要应用在Windows环境下，其工作原理是让CIFS协议运行于TCP/IP通信协议之上，让Unix计算机可以在网络邻居上被Windows计算机看到。
+CIFS共享认证方式
+CIFS共享认证提供两种方式的共享文件访问权限，分别是user和ADS（Active Directory Server）。
+user：本地用户认证。用户的用户名和密码创建都由N8000保存在本地，无需搭建其他服务器。
+ADS：活动目录服务。共享认证通过AD域控制器处理，AD域环境中的成员均可访问共享。
+ 
 
  
 
