--- a/k8s/笔记/存储.md
+++ b/k8s/笔记/存储.md
@@ -217,7 +217,7 @@ RAID 的初衷是为大型服务器提供高端的存储功能和冗余的数据
 
 - 条带（strip）：硬盘中单个或者多个连续的扇区构成一个条带，他是一块硬盘上进一次数据读写的最小单元，它是组成分条的元素。
 
-- 分条： 把多个条带组合成分条。
+- 分条： 同一硬盘阵列中的多个**硬盘驱动器上相同 “位置”**（或者说是相同**编号**）的条带。
 
   ![](images\tiaodai.jpeg)
 
@@ -305,9 +305,9 @@ CIFS共享认证方式
 CIFS共享认证提供两种方式的共享文件访问权限，分别是user和ADS（Active Directory Server）。
 user：本地用户认证。用户的用户名和密码创建都由N8000保存在本地，无需搭建其他服务器。
 ADS：活动目录服务。共享认证通过AD域控制器处理，AD域环境中的成员均可访问共享。
- 
 
- 
+
+
 
 
 
@@ -560,3 +560,9 @@ SSD的优势
 SSD的劣势
 　　固态硬盘成本高　目前的固态硬盘的每GB价格与传统硬盘相比依然有一定的差距，随着固态硬盘不断的发展，固态硬盘在2012年内每GB将低于1美元。固态硬盘将于2013到2016年内普及。 
 　　固态硬盘的寿命有限 对于采用Nand Flash作为存储介质的SSD来说，怀疑其使用寿命也不是没有道理的，理论上MLC的写入寿命为1万次，SLC的写入寿命为10万次。但是否意味着一个 固态硬盘的寿命只有2到3年呢，这个也不一定。英特尔表示保证能在未来5年里，每天可以向其MLC SSD产品中写入100GB的数据，并且保证其数据的完整性。如果不是写入太频繁的话，正常使用用5年以上是没有问题的。
+
+
+
+
+
+## **存储可靠性技术**
