--- a/k8s/笔记/存储.md
+++ b/k8s/笔记/存储.md
@@ -325,6 +325,15 @@ https://blog.csdn.net/sj349781478/article/details/125116173
 
 
 
+- SmartThin技术做了如下改进：
+  - 改进一：采用SmartThin技术的LUN空间在创建时不真正分配具体空间，而在需要真正使用空间时，再分配具体空间。
+  - 改进二：有了改进一的基础后，采用SmartThin技术的LUN空间可以在创建后动态调整大小。
+
+- 当出现数据容量超过预期的情况时，可以动态调整该LUN的空间。未使用的空间作为公共的空间可以分配给任何需要空间的LUN。这样，不存在私有的一直不能被使用到的空间，提高了利用率和效能比。同时，动态空间调整提供了在线调整LUN空间大小的能力，可以做到扩容的同时不影响业务。
+
+Capacity-on-write：当Thin LUN接收到主机写数据请求，首先会通过direct-on-time技术判断该写数据请求的逻辑存储区域是否已经分配了实际存储区域，如果尚未分配就会触发空间分配，分配的最小粒度称为Grain, Grain大小为64k，然后将数据写入到新分配的实际存储区域中
+ 
+
 ## RTO和RPO
 
 
