--- a/k8s/笔记/存储.md
+++ b/k8s/笔记/存储.md
@@ -83,7 +83,6 @@ SCSI ID
 设备1每隔2S就尝试发送数据，设备2则每隔10s尝试发送数据。很明显设备1（优先级高的设备）获得发送数据的概率高！
 注意SCSI ID虽然是总线上设备的唯一标识，但是仅仅依靠SCSI ID并不能寻址。
 
-
 SCSI协议寻址
 需要3个元素来寻址
 总线号（BUS ID）：用于区分每一条总线，多个SCSI控制器需要用总线号来确定是哪一个控制器。
@@ -171,6 +170,24 @@ c. 零配置发现
 数据迁移：提供数据迁移时段
 
 迁移粒度：迁移粒度越越快
+
+迁移模式包括手动和定时两种，默认设置为手动。
+
+- 手动方式
+
+  当重新配置存储池时，例如新增加一个存储层，或当活跃数据随时间不断变化且在较长时间内在各个存储层均衡分布时，用户可能需要手动启动数据迁移。手动启动数据迁移时，SmartTier首先对当前I/O监控数据进行数据排布分析，并根据该分析结果决定数据块的迁移方向。
+
+- 定时方式
+
+  当需要在预先设置的时间段进行数据迁移时，使用此方式。
+
+开启I/O监控是各个存储层之间数据迁移和查看存储层容量策略模型的前提条件，并能指定监控日期和时间范围，以便进行数据排布分析。
+
+
+
+- 默认设置为不迁移。推荐采用的最佳做法是根据LUN的性能要求和业务环境设置SmartTier策略并实时调整，为获得最佳效果，设置SmartTier策略时建议结合LUN的初始容量分配策略共同考虑。
+- 由于存储池中可能存在多个LUN，各自设置的SmartTier策略存在不同，而I/O监控则是作用于整个存储池的，因而建议开启I/O监控以确保设置了自动迁移策略的LUN能够完成迁移任务。
+
 ## SmartQos
 流量控制 基于令牌分配技术
 一个扇区对应一个令牌
@@ -398,6 +415,13 @@ https://blog.csdn.net/f1092522699/article/details/112861274
 ## HyperReplication  远程复制
 
 https://blog.csdn.net/m0_49864110/article/details/124126379
+
+
+
+- 远程复制Pair只能在主端添加
+- 一致性的组必须来自同一个LUN
+- 一致性组中的LUN可以归属不同的控制器
+- 一致性组可以管理多个远程复制，执行同步、分裂主从切换等操作
 
 
 
