--- a/k8s/笔记/存储.md
+++ b/k8s/笔记/存储.md
@@ -30,6 +30,14 @@ Zonging
 
 1.一个设备可以在多个zong
 
+
+
+### FC网络：
+
+FC交换机中那些端口可以互相通信有zone决定
+
+
+
 ## 结构化数据与非结构化数据
 
 　　结构化数据也称作行数据，是由二维表结构来逻辑表达和实现的数据，严格地遵循数据格式与长度规范，主要通过关系型数据库进行存储和管理。
@@ -593,8 +601,6 @@ SSD的优势
 SSD的劣势
 　　固态硬盘成本高　目前的固态硬盘的每GB价格与传统硬盘相比依然有一定的差距，随着固态硬盘不断的发展，固态硬盘在2012年内每GB将低于1美元。固态硬盘将于2013到2016年内普及。 
 　　固态硬盘的寿命有限 对于采用Nand Flash作为存储介质的SSD来说，怀疑其使用寿命也不是没有道理的，理论上MLC的写入寿命为1万次，SLC的写入寿命为10万次。但是否意味着一个 固态硬盘的寿命只有2到3年呢，这个也不一定。英特尔表示保证能在未来5年里，每天可以向其MLC SSD产品中写入100GB的数据，并且保证其数据的完整性。如果不是写入太频繁的话，正常使用用5年以上是没有问题的。
-
-
 
 
 
