--- a/k8s/笔记/存储.md
+++ b/k8s/笔记/存储.md
@@ -38,6 +38,57 @@ FC交换机中那些端口可以互相通信有zone决定
 
 
 
+FC  SAN 组网方式：
+
+- 仲裁环
+
+- 双交换
+
+- 直连
+
+- 单交换
+
+  
+
+
+
+**设备线缆**
+
+串口线缆用来连接设备的系统串口到维护终端。
+
+mini SAS HD线缆：存储系统中mini SAS HD线缆用于连接级联端口，连接控制框到硬盘框。mini SAS HD线缆分为mini SAS HD电缆和mini SAS HD光缆。
+
+AOC线缆（Active Optical Cable）：用于连接存储系统控制框上控制器的PCIe接口至数据交换机。
+
+100G QSFP28线缆：100G QSFP28线缆主要用于多控间直连组网或连接智能硬盘框。
+
+25G SFP28线缆：25G SFP28线缆主要用于前端主机组网。
+
+FDR线缆（Fourteen Data Rate）：是56Gb IB接口模块专用线缆。
+
+光纤：设备通过光纤与光纤交换机进行通信。光纤的一端可连接FC（Fibre Channel ） HBA（Host Bus Adapter）卡，另一端连接光纤交换机或存储。光纤两端都为LC（Lucent Connector）连接器。存储到光纤交换机可以使用MPO-4DLC光纤线连接，MPO-4DLC光纤是8Gb FC接口模块（8端口）和16Gb FC接口模块（8端口）专用线缆。 
+
+保险箱盘：用于保存存储系统的数据、系统配置信息和日志、系统掉电后Cache中的数据。
+
+内置的保险箱盘：Huawei OceanStor Dorado V6每个控制器内置1块或2块SSD硬盘作为保险箱盘。
+外置的保险箱盘：存储系统会自动选择系统中的4块硬盘规划为保险箱盘，每块硬盘各取2GB空间组成RAID1，保险箱盘上的其他容量可以用来存储业务数据。当保险箱盘故障时，为保障冗余性，系统会自动从其余硬盘中选择状态正常的盘来替代故障保险箱盘。
+电源模块：交流电源模块，可以支持控制框在最大功耗模式下正常运行。
+
+4控制器存储产品每个4U控制框有4个电源模块（PSU，Power Supply Unit），分别为PSU 0、PSU 1、PSU 2、PSU 3。分为两个电源平面，PSU 0与PSU 1为一个电源平面且互为冗余，为A、C控制器供电。PSU 2和PSU 3为另外一个电源平面且互为冗余，为B、D控制器供电。为保障电源模块供电的可靠性，建议PSU 0和PSU 2插入一个PDU，PSU 1和PSU 3插入另外一个PDU。
+2控制器存储产品每个控制框有２个电源模块（PSU，Power Supply Unit），分别为PSU 0、PSU 1，组成一个电源平面且互为冗余，为A、Ｂ控制器供电。为保障电源模块供电的可靠性，建议PSU 0和PSU 1分别插入不同的PDU。 
+
+硬盘框
+硬盘框形态
+
+硬盘框采用部件模块化设计，主要由系统插框、级联模块、电源模块和硬盘模块等组成。
+
+系统插框：通过背板为各种接口模块提供可靠的连接，实现各个模块之间的信号互连与电源互连。
+级联模块：通过级联端口来级联控制框和其他硬盘框，实现与控制框和其他硬盘框的通信，是控制框与硬盘框之间、硬盘框与硬盘框之间进行数据传输的连接点。
+电源模块：可以支持硬盘框在最大功耗模式下正常运行。
+硬盘模块：为存储系统提供存储容量，可作为系统保险箱，并且可以实现业务数据、系统数据和缓存数据的存储作用。
+
+
+
 ## 结构化数据与非结构化数据
 
 　　结构化数据也称作行数据，是由二维表结构来逻辑表达和实现的数据，严格地遵循数据格式与长度规范，主要通过关系型数据库进行存储和管理。
@@ -53,7 +104,6 @@ FC交换机中那些端口可以互相通信有zone决定
 
 https://www.jianshu.com/p/c890e3ad9c07
 虽然SCSI控制器可以连接多个存储设备，形成自己的网络，但是它只能与直接相连的存储设备进行通信，只能在在局域网内部使用，不能再以太网上共享。
-
 
 总线是计算机与存储系统间通讯的主要通道，是源设备到目标设备的传输路径
 SCSI接口是一种用于计算机与周边设备通讯的接口。如上图，SCSI总线上数据操作和管理都是由SCSI的控制器进行控制，SCSI控制器可以看作是一块小型CPU，它有自己的命令集和缓存。上图的SCSI结构可以对计算机中连接到SCSI总线上的多个设备动态分工操作，灵活分配资源
@@ -445,7 +495,21 @@ https://blog.csdn.net/m0_49864110/article/details/124126379
 
 
 ## 硬盘类型：
+### 机械盘
+
+**寻道时间**
+**磁头**从开始移动到数据所在**磁道**所需要的时间寻道时间越短，I/O操作越快
+
+影响磁盘的性能原因：
+
+
+
+
+
+
+
 ### SSD
+
 ### SAS
 https://blog.csdn.net/sinat_37817094/article/details/120935299
 
@@ -460,11 +524,20 @@ SAS特点
 SAS采用全双工（双向）通信模式，而不是单向通信。传统的并行SCSI只可以在一个方向上进行通信，当设备接收到并行SCSI的一个数据包后，如果该设备要响应该数据包，就需要在上一个链路断开后，再重新建立一个新的SCSI通信链路。而是用SAS，则可以进行双向通信。每个SAS电缆有4根电缆， 2根输入2根输出。 SAS可以同时进行数据的读写，全双工的数据操作提高数据的吞吐效率。
 
 
+
+
 ### NL-SAS
 
 ### IB网络
 
 IB网络因其低延迟、高带宽的网络特性被用于很多高性能计算（High Performance Computing，HPC）项目，IB网络采用了100G Mellanox IB网卡，通过专用IB交换机和控制器软件UFM实现网络通信和管理。IB网络通过Partition Key实现网络隔离，不同租户的IB网络可通过不同的Partition Key来隔离，类似于以太网的VLAN。在BMS场景，IB网络支持RDMA和IPoIB通信方式。
+
+### NVME
+
+- 可以实现设备和CPU直接通信
+- 不能实现scsi协议传输
+
+
 
 ## RAID2.0+
 
@@ -534,8 +607,23 @@ https://blog.csdn.net/u012158332/article/details/125334200
 - RoCE：基于 Ethernet 做 RDMA，消耗的资源比 iWARP 少，支持的特性比 iWARP 多。可以使用普通的以太网交换机，但是需要支持RoCE的网卡。
 - iWARP：基于TCP的RDMA网络，利用TCP达到可靠传输。相比RoCE，在大型组网的情况下，iWARP的大量TCP连接会占用大量的内存资源，对系统规格要求更高。可以使用普通的以太网交换机，但是需要支持iWARP的网卡
 
+# 多路径软件
+
+1. 实现应用服务器和存储系统之间的路径选择
+   UltraPath软件以内核模块的形式加载到[Linux操作系统](https://so.csdn.net/so/search?q=Linux操作系统&spm=1001.2101.3001.7020)中，它在操作系统内部被注册成为一个虚拟设备。该软件可以使应用服务器与存储系统之间以最优的路径进行通信。
+   2. Failover功能
+      Failover即故障切换。为保障数据传输的高可靠性，应用服务器与存储系统之间可以连接多条路径。当主路径出现故障后，UltraPath软件所提供的failover功能可以自动将业务切换到备用路径上，避免因单点故障造成业务中断。
+      说明：
+      在存储系统上创建LUN时，每个LUN会被指定归属控制器。如果将某个LUN映射给应用服务器使用，且应用服务器与该LUN的归属控制器相连，则对于该映射LUN采用这种方式相连的路径称为主路径，其他冗余连接的路径成为备用路径。工作路径在主路径上可以最好的发挥I/O性能。
+      3. Failback功能
+         Failback即故障恢复，是指当主路径由于某种原因发生故障，I/O流传输路径被切换到备用路径上。当主路径的故障解除或修复后，即能够重新正常传输I/O流时，UltraPath软件所提供的failback功能会自动地将I/O传输路径从备用路径切换回主路径上。
+         4. I/O负载均衡功能
+            I/O负载均衡的主要作用是分担网络流量或扩展带宽。实现IO流量由多条路径均衡承载到达同一个目的地。当从应用服务器连接到存储系统中的同一个控制器的路径有两条以上时，UltraPath软件会在同一个控制器上的多条可达路径上发送I/O数据包，以实现负载均衡。或者当应用服务器有多条路径同时连接到存储系统的两个控制器上时，UltraPath软件会在两个控制器的多条可达路径上发送I/O数据包，实现控制器间的负载均衡。
+            5. I/O悬挂功能
+               当由于链路故障等原因导致无法下发I/O时，系统将I/O命令暂时保存在多路径自身队列中，等待故障恢复后再重新下发I/O，从而保障业务不中断。
 
 # 存储快照
+
 全球网络存储工业协会SNIA（StorageNetworking Industry Association）对快照（Snapshot）的定义是：关于指定数据集合的一个完全可用拷贝，该拷贝包括相应数据在某个时间点（拷贝开始的时间点）的映像。快照可以是其所表示的数据的一个副本，也可以是数据的一个复制品。
 
 快照的作用主要是能够进行在线数据备份与恢复。当存储设备发生应用故障或者文件损坏时可以进行快速的数据恢复，将数据恢复某个可用的时间点的状态。快照的另一个作用是为存储用户提供了另外一个数据访问通道，当原数据进行在线应用处理时，用户可以访问快照数据，还可以利用快照进行测试等工作。所有存储系统，不论高中低端，只要应用于在线系统，那么快照就成为一个不可或缺的功能。 
