--- a/k8s/笔记/存储.md
+++ b/k8s/笔记/存储.md
@@ -15,9 +15,33 @@ NAS（网络附加存储）
 拓展：
 　　随着网络技术的发展，NAS扩展到用于满足企业访问数据高性能和高可靠性的需求。 NAS设备是专用的、高性能的、高速的、单一用途的文件服务和存储系统。
 
+DAS（Direct Attached Storage—直接连接存储），是指将存储设备通过SCSI接口或[光纤通道](http://baike.baidu.com/view/15247.htm)直接连接到服务器上
+
+
+
 优点：部署简单、组网方式复杂度小
 
+#### NAS（存储区域网络）
+
+# [共享存储、C/S和B/S架构、存储的分类和区别（SAN、NAS、DAS）、存储共享的过程](https://www.cnblogs.com/yunjisuanchengzhanglu/p/16040054.html)
+
+由提供存储的资源或者服务器管理
+
+
+
+https://www.cnblogs.com/yunjisuanchengzhanglu/p/16040054.html
+
+
+
+ 
+
+
+
 #### SAN（存储区域网络）
+
+
+
+文件系统由主机管理
 
 　　是一个用在服务器和存储资源之间的、专用的、高性能的网络体系。它为了实现大量原始数据的传输而进行了专门的优化。因此，可以把FC SAN看成是对SCSI协议在长距离应用上的扩展（原先的SCSI协议最大的传输距离是6米）。FC SAN使用的典型协议组是SCSI和Fiber Channel 。 Fiber Channel特别适合这项应用，原因在于一方面它可以传输大块数据，另一方面它能够实现远距离传输。
 实现IP SAN的典型协议是iSCSI，它定义了SCSI指令集在IP网络中传输的封装方式。
@@ -490,25 +514,7 @@ Capacity-on-write：当Thin LUN接收到主机写数据请求，首先会通过d
 
 
 
-# [共享存储、C/S和B/S架构、存储的分类和区别（SAN、NAS、DAS）、存储共享的过程](https://www.cnblogs.com/yunjisuanchengzhanglu/p/16040054.html)
 
-
-
-DAS（Direct Attached Storage—直接连接存储），是指将存储设备通过SCSI接口或[光纤通道](http://baike.baidu.com/view/15247.htm)直接连接到服务器上
-
-https://www.cnblogs.com/yunjisuanchengzhanglu/p/16040054.html
-
-
-
-SAN:
-
-文件系统由主机管理
-
-
-
-NAS:
-
-由提供存储的资源或者服务器管理
 
 
 
