--- a/k8s/笔记/存储.md
+++ b/k8s/笔记/存储.md
@@ -296,6 +296,14 @@ c. 零配置发现
 在线重删原理
 后处理相似重删
 ## 容灾
+常用的容灾技术:
+- 基于主机层容灾
+- 基于网络层容灾
+- 基于阵列层容灾
+实现复制功能的设备：
+- 主机
+- 网络
+- 存储
 ### 双活
 
 #### 主机层容灾：
