--- a/k8s/笔记/存储.md
+++ b/k8s/笔记/存储.md
@@ -15,6 +15,8 @@ NAS（网络附加存储）
 拓展：
 　　随着网络技术的发展，NAS扩展到用于满足企业访问数据高性能和高可靠性的需求。 NAS设备是专用的、高性能的、高速的、单一用途的文件服务和存储系统。
 
+
+
 DAS（Direct Attached Storage—直接连接存储），是指将存储设备通过SCSI接口或[光纤通道](http://baike.baidu.com/view/15247.htm)直接连接到服务器上
 
 
@@ -313,6 +315,15 @@ c. 零配置发现
 3. 逻辑卷
 
 网络层容灾：
+
+容灾等级：
+- 数据
+- 应用
+- 业务
+  
+  灾备功能：
+  - 快照
+  - 远程复制
 
 #### 预拷贝：
 
