--- a/k8s/笔记/存储.md
+++ b/k8s/笔记/存储.md
@@ -436,6 +436,11 @@ RAID2.0+当中性能好的方面体现在哪里？主要是以下几个方面。
 
 第三、RAID2.0+的热备采用的是空间的形式，每个盘上面的CK都可以作为数据恢复的CK，恢复速度较快
 
+RAID2.0+  双层虚拟化 （上层LUN虚拟化+底层块虚拟化）
+        将硬盘划分为若干个相同大小的CK，其中一CK做热备块，其余的CK做数据块
+        硬盘域中每个硬盘出1个CK，组成一个CKG。热备CK组成的就是热备CKG
+        然后将CKG做RAID，然后划分为Extent或Grain组成LUN供用户使用
+
 ### extent:
 
 同一个存储池中的大小必须一致
