--- a/k8s/笔记/存储.md
+++ b/k8s/笔记/存储.md
@@ -403,7 +403,16 @@ RAID 的初衷是为大型服务器提供高端的存储功能和冗余的数据
 
 RAID 0至少需要由两块硬盘构成，RAID 0并没有差错控制机制，也就是指RAID 0并没有校验盘。
 
-#### raid 0
+组成一个大的虚拟存储设备，并将数据分成几块分别依次写入到各个物理硬盘中。这样，在理想的情况下，硬盘的读写性能将会提高数倍，但是raid0也有局限性，提高读写速率的同时，如果任意中的一块硬盘发生故障，将会导致整个系统的数据都受到破坏。
+优点
+- 组成一个大块的盘
+- 数据分散存储，提高读写效率
+
+缺点：
+任意一块盘坏了影响整个系统
+
+#### raid 1
+将数据同时写入到多块硬盘设备上,也就是多个硬盘有同样的数据提高了数据安全性，降低了使用率，仅是在raid0的基础上增加了数据安全性
 
 
 
