--- a/k8s/笔记/存储.md
+++ b/k8s/笔记/存储.md
@@ -696,13 +696,19 @@ Extent/Grain
 
 目前有三种RDMA网络，分别是Infiniband、RoCE(RDMA over Converged Ethernet)、iWARP。
 
-### Infiniband
+
+
+为了解决网络传输中服务器端数据处理的延迟而产生的。DMA技术能直接通过网络接口访问内存数据，无需操作系统内核的介入。这允许高吞吐、低延迟的网络通信，尤其适合在大规模并行计算机集群中使用
+
+###  IB （Infiniband）
 
 Infiniband是一种专为RDMA设计的网络，从硬件级别保证可靠传输 ，技术先进，但是成本高昂。
 
  而RoCE 和 iWARP都是基于以太网的RDMA技术，这使高速、超低延时、极低CPU使用率的RDMA技术得以部署在目前使用最广泛的以太网上。是一种专为RDMA设计的网络，从硬件级别保证可靠传输 ，技术先进，但是成本高昂。 而RoCE 和 iWARP都是基于以太网的RDMA技术，这使高速、超低延时、极低CPU使用率的RDMA技术得以部署在目前使用最广泛的以太网上。
 
-### RoCE、iWARP、IB和TCP
+### iWARP
+
+基于TCP的RDMA网络，利用TCP达到可靠传输。相比RoCE，在大型组网的情况下，iWARP的大量TCP连接会占用大量的内存资源，对系统规格要求更高。可以使用普通的以太网交换机，但是需要支持iWARP的网卡
 
 https://blog.csdn.net/u012158332/article/details/125334200
 
@@ -713,9 +719,23 @@ https://blog.csdn.net/u012158332/article/details/125334200
 | 稳定性 | 好         | 差                | 较好             |
 | 交换机 | IB交换机   | 以太网交换机      | 以太网交换机     |
 
-- InfiniBand：设计之初就考虑了 RDMA，从硬件级别保证可靠传输，提供更高的带宽和更低的时延。但是成本高，需要支持IB网卡和交换机。
-- RoCE：基于 Ethernet 做 RDMA，消耗的资源比 iWARP 少，支持的特性比 iWARP 多。可以使用普通的以太网交换机，但是需要支持RoCE的网卡。
-- iWARP：基于TCP的RDMA网络，利用TCP达到可靠传输。相比RoCE，在大型组网的情况下，iWARP的大量TCP连接会占用大量的内存资源，对系统规格要求更高。可以使用普通的以太网交换机，但是需要支持iWARP的网卡
+InfiniBand：设计之初就考虑了 RDMA，从硬件级别保证可靠传输，提供更高的带宽和更低的时延。但是成本高，需要支持IB网卡和交换机。
+
+### RoCE：
+
+基于 Ethernet 做 RDMA，消耗的资源比 iWARP 少，支持的特性比 iWARP 多。可以使用普通的以太网交换机，但是需要支持RoCE的网卡。
+
+RoCE协议有RoCEv1和RoCEv2两个版本，RoCEv1是基于以太网链路层实现的RDMA协议(交换机需要支持PFC等流控技术，在物理层保证可靠传输)，而RoCEv2是以太网TCP/IP协议中UDP层实现，引入IP解决了扩展性问题
+
+### TCP/IP
+
+### 分布式存储中常用的网络协议
+
+- IB：常用于DPC场景中的存储前端网络。
+- RoCE：常用于存储后端网络。
+- TCP/IP：常用于业务网络。
+
+
 
 # 多路径软件
 
