--- a/k8s/笔记/存储.md
+++ b/k8s/笔记/存储.md
@@ -642,6 +642,25 @@ https://blog.csdn.net/m0_49864110/article/details/124126379
 ## 硬盘类型：
 ### 机械盘
 
+#### 影响硬盘性能的因素
+
+##### 转速：
+
+指硬盘盘片转动圈数/分钟，单位rpm。读写数据时，磁头不会动，靠盘片的转动来感应读取数据，因此盘片转得越快，数据传输时间就越短。在连续IO情况下，磁头臂寻道次数少，因此要提高吞吐量或IOPS值，转速就是首要影响因素。
+
+##### 寻道速度：
+
+随机IO情况下，磁头臂需要频繁更换磁道，用于数据传输的时间相比较于换道消耗的时间来说是很少的，因此若磁头臂能够以很高的速度更换磁道，那么就会提升随机IOPS值。
+
+##### 单碟容量：
+
+单碟容量越高，证明相同空间内的数据量越大，即数据密度越大。在相同转速和寻道速度条件下，具有高数据密度的硬盘会显示出更高的性能。
+
+##### 接口速度：
+
+目前的接口速度在理论上都已满足硬盘所能达到的最高外部传输带宽。在随机IO环境下，接口速度显得更加不重要，因此瓶颈几乎都在寻道速度上
+ 
+
 **寻道时间**
 **磁头**从开始移动到数据所在**磁道**所需要的时间寻道时间越短，I/O操作越快
 
