--- a/k8s/笔记/存储.md
+++ b/k8s/笔记/存储.md
@@ -664,15 +664,108 @@ https://blog.csdn.net/m0_49864110/article/details/124126379
 **寻道时间**
 **磁头**从开始移动到数据所在**磁道**所需要的时间寻道时间越短，I/O操作越快
 
-影响磁盘的性能原因：
+ 平均访问时间
+平均寻道时间：指硬盘的磁头从初始位置移动到盘面指定磁道所需的时间，是影响硬盘内部数据传输率的重要参数。这个时间越小越好。
+平均等待时间：指磁头已处于要访问的磁道，等待所要访问的扇区旋转至磁头下方的时间。平均等待时间通常为盘片旋转一周所需时间的一半，因此硬盘转速越快，等待时间就越短。
+数据传输速率
+数据传输速率：硬盘的数据传输率是指硬盘读写数据的速度。数据传输率包括外部数据传输率和内部数据传输率两个指标，单位MB/s。
+
+内部传输率：也称为持续传输率（Sustained Transfer
+Rate），指磁头读写硬盘时的最高速率。不包括寻道以及等待扇区旋转磁头下所耗费的时间的影响。它是一种理想情况，即假设磁头读写的时候不需要换道，也不专门读取某个扇区，只在一个磁道上连续的循环读写这个磁道的所有扇区，此时的速率就叫做硬盘的内部传输速率。
+外部传输率：也称为突发数据传输率（Burst Data Transfer Rate）或接口传输率。它指的是系统总线与硬盘缓冲区之间的数据传输率，与硬盘接口类型和硬盘缓存的大小有关。
+硬盘的IOPS和传输带宽
+IOPS计算方法：由寻道时间、旋转延迟和数据传输时间三部分构成。
+
+寻道时间：寻道时间越短，I/O操作越快，目前硬盘的平均寻道时间一般在3-15ms。
+旋转延迟：指盘片旋转将请求数据所在扇区移至度写磁头下方所需要的时间。旋转延迟取决于硬盘转速，通常使用硬盘旋转一周所需时间的1/2表示。如7200rpm的硬盘平均旋转延迟大约是60*1000/7200/2=4.17ms，而转速为15000rpm的硬盘其平均旋转延迟约2ms。
+数据传输时间：指完成传输所请求的数据所需要的时间，它取决于数据传输率，其值等于数据大小除以数据传输率，比如IDE/ATA能达到133MB/s，SATA
+II可达到300MB/s的接口数据传输率。
+随机IO情况下，磁头臂需要频繁更换磁道，用于数据传输的时间相对于换道消耗的时间来说是很少的，不在同一个数量级上。因此可忽略数据传输时间。
+ 
 
 
 
+#### 数据传输方式
 
+##### 并行传输：
+
+并行传输的传输效率高，但是传输距离不长，传输频率不高；
+在长距离上，使用多条线路要比使用一条单独线路昂贵；
+长距离传输要求较粗的导线，以便降低信号的衰减，但把它们捆到一条单独电缆中相当困难；
+长距离传输时，受导线电阻或其他因素影响，每条线上的数据到达对方的速度不同，从而导致接收方必须等8条线上的所有数字都到达后，才能发起下一轮传送。
+传输频率太高时，电路高速震荡的时候，数据线之间会产生很大的干扰，因此并行传输的频率不能太高。
+
+##### 串行传输：
+
+串行传输在效率上显然比并行传输低得多，但是可以通过提高传输频率来搞传输速度，总体来说串行传输反而比并行传输的总体速率更快。
+串行传输用于远距离传输，目前如PCI接口都转向串行传输方式。PCIE接口就是典型的串行传输方式，其单条线路传输速率高达2.5Gb/s。
 
 #### JBOD
 
 又被称为Spanning，指还没有使用raid容错改进的硬盘
+
+#### 硬盘接口技术
+
+按接口将硬盘分为IDE、SCSI、SATA、SAS、FC硬盘等。该方式最常见，但是这种分类方式下硬盘的差别不只是接口，还有机械底盘。
+
+IDE和SATA硬盘都采用ATA系的机械底盘，适用于单任务处理。
+
+SCSI、SAS、FC硬盘都采用SCSI系的机械底盘，能更好地满足服务器多任务的需要。
+
+两者对比：
+
+ATA系硬盘面对大数据吞吐量的服务时，速度不如SCSI系硬盘；
+面对多任务数据读取，硬盘磁头频繁来回摆动，导致硬盘过热是ATA系硬盘比较严重的问题。
+SCSI系机械底盘可靠性比ATA系的机械底盘高。
+
+#### IDE硬盘接口：
+
+ATA接口发展到今，推出多个不同版本，分别是：ATA-1（IDE）、ATA-2（EIDE Enhanced IDE/Fast
+ATA、ATA-3（FastATA-2）、ATA-4（ATA33）、ATA-5（ATA66）、ATA-6（ATA100）、ATA-7（ATA133）。
+ATA接口具有以下优缺点：
+ 优点： 价格低廉、兼容性非常好；
+ 缺点： 速度慢、只能内置使用、对接口电缆的长度有很严格的限制
+
+#### SATA硬盘接口：
+
+在数据传输的过程中，数据线和信号线独立使用，并且传输的时钟频率保持独立，因此与PATA相比，SATA的传输速率可以达到并行的30倍。
+优点：
+ SATA接通常为7+15针，采用单通道，传输速率要比ATA更快。
+ SATA对指令及数据封包采用CRC循环冗余校验技术，保障数据传输可靠性。
+ SATA具有比ATA更好的抗干扰能力。
+
+#### SCSI硬盘接口：
+
+SCSI英文全称：Small Computer System
+Interface，它出现的原因主要是因为原来的IDE接口的硬盘转速太慢，传输速率太低，因此高速的SCSI硬盘出现。其实SCSI并不是专为硬盘设计的，实际上它是一种总线型接口，独立于系统总线工作。
+
+优点：
+ 适应面广，在一块SCSI控制卡上就可以同时挂接15个设备 ；
+ 高性能（具有多任务、CPU占用率低、转速快及传输率高等特点）；
+ 具有外置和内置两种 ，支持热插拔。
+
+缺点：
+ 价格昂贵，安装设置复杂。
+
+#### SAS硬盘接口：
+
+SAS和Serial ATA(SATA)硬盘相同，都是采用串行技术以获得更高的传输速度，并通过缩短连结线改善内部空间等。
+SAS是并行SCSI接口之后开发出的全新接口，此接口的设计是为了改善存储系统的效能、可用性和扩充性，并且SAS可以向下兼容SATA，二者的兼容性主要体现在物理层和协议层的兼容。
+优点：
+ SAS在传输速率、抗干扰性方面强于SCSI，实现更长的连接距离。
+缺点：
+ SAS接口硬盘价格相对更高。
+
+#### FC硬盘接口：
+
+FC和SCSI接口一样，最初也不是为硬盘设计开发的接口技术，而是专门为网络系统设计的，但随着存储系统对速度的需求，才逐渐应用到硬盘系统中。
+优点：
+ 具有很好的升级性 ，可以用非常长的光纤电缆，可超过10公里；
+ 具有非常高的带宽；
+ 具有很强的通用性 。
+缺点：
+ 价格非常昂贵；
+ 组建复杂。
 
 ### SSD
 
