--- a/k8s/笔记/存储.md
+++ b/k8s/笔记/存储.md
@@ -347,7 +347,12 @@ c. 零配置发现
 
 4.将要预拷贝的数据不用重新计算和重构
 
-
+| 容灾技术     | 时长   |
+| ------------ | ------ |
+| 磁带备份     | 日级   |
+| 定期数据备份 | 小时级 |
+| 异步数据备份 | 分钟级 |
+| 同步数据复制 | 秒级   |
 
 
 
