--- a/k8s/笔记/存储.md
+++ b/k8s/笔记/存储.md
@@ -436,7 +436,7 @@ Raid5技术是把硬盘设备的数据奇偶校验信息保存到其他硬盘设
 
 #### raid 10
 Raid10是Raid1和Raid0的组合体，如图4所示，Raid10技术至少需要4块硬盘来组建，其中先分别两两制成Raid1磁盘阵列，以保证数据的安全性。然后再对两个Raid1磁盘按阵列实施Raid0技术，进一步提高硬盘设备的读写速度。这样从理论上讲，只要坏的不是同一组中的所有磁盘，那么最多可以损坏50%的硬盘设备而不丢失数据。由于Raid10技术击继承了Raid0的高速写速度和Raid1的数据安全性，在不考虑成本的情况下Raid10的性能都超过了Raid5，因此当前成为广泛使用的一种存储技术。
- 
+
 
 
 
@@ -848,3 +848,5 @@ SSD的劣势
 
 
 ## **存储可靠性技术**
+
+## FLASH Link -众核技术
