--- a/k8s/笔记/存储.md
+++ b/k8s/笔记/存储.md
@@ -1100,4 +1100,14 @@ FDR线缆（Fourteen Data Rate）：是56Gb IB接口模块专用线缆。
 
 ## **存储可靠性技术**
 
+WWPN
+World Wide Port Name,  是对于FC HBA卡上的一个端口的全球唯一标识符，它相当于网卡中的MAC地址，全球只有唯一一个。
+
+WWNN
+World Wide Node Name, 是对于每一个节点（终端或者设备）的全球唯一标示符。
+
+根据以上的描述
+对于单口的FC HBA来说，它应该只有一个WWNN和一个WWPN
+对于双口的FC HBA来说，它应该只有一个WWNN和和两个WWPN
+对于FC交换机来说，它应该只有一个WWNN，每一个接口对应一个WWPN。
 ## FLASH Link -众核技术
