--- a/k8s/笔记/存储.md
+++ b/k8s/笔记/存储.md
@@ -420,7 +420,7 @@ RAID 的初衷是为大型服务器提供高端的存储功能和冗余的数据
 
 RAID 0至少需要由两块硬盘构成，RAID 0并没有差错控制机制，也就是指RAID 0并没有校验盘。
 
-组成一个大的虚拟存储设备，并将数据分成几块分别依次写入到各个物理硬盘中。这样，在理想的情况下，硬盘的读写性能将会提高数倍，但是raid0也有局限性，提高读写速率的同时，如果任意中的一块硬盘发生故障，将会导致整个系统的数据都受到破坏。
+组成一个大的虚拟存储设备，并将数据分成几块分别依次写入到各个物理硬盘中。这样，在理想的情况下，硬盘的读写性能将会提高数倍，但是raid0也有局限性，提高读写速率的同时，如果任意中的一块硬盘发生故障，将会导致整个系统的数据都受到破坏。属于条带模式，至少需要两块磁盘
 优点
 - 组成一个大块的盘
 - 数据分散存储，提高读写效率
@@ -463,9 +463,36 @@ RAID6的这种设计也带来了很高的复杂度，虽然数据冗余性好，
 Raid10是Raid1和Raid0的组合体，如图4所示，Raid10技术至少需要4块硬盘来组建，其中先分别两两制成Raid1磁盘阵列，以保证数据的安全性。然后再对两个Raid1磁盘按阵列实施Raid0技术，进一步提高硬盘设备的读写速度。这样从理论上讲，只要坏的不是同一组中的所有磁盘，那么最多可以损坏50%的硬盘设备而不丢失数据。由于Raid10技术击继承了Raid0的高速写速度和Raid1的数据安全性，在不考虑成本的情况下Raid10的性能都超过了Raid5，因此当前成为广泛使用的一种存储技术。
 
 
+## Hyper Clone
+①　定义
+克隆是快照技术的一种，是源数据在某个时间点的完整副本，是一种可增量同步的备份方式。其中：
 
+“完整”指对源数据进行完全复制生成数据副本。
 
+“增量同步”指数据副本可动态同步源数据的变更部分。
+本存储系统的克隆特性中，保存源数据的LUN称为主LUN，保存数据副本的LUN称为从LUN。
+l 主、从LUN 
 
+在克隆中，为生产数据提供存储空间的LUN称为主LUN，保存主LUN数据副本的LUN称为从LUN。
+
+l Pair
+
+在克隆中，主LUN和每个从LUN构成一个Pair。 Pair主要用于表示主LUN和从LUN之间的镜像关系。一个克隆中只能有一个主LUN，但可以添加多个从LUN。每添加一个从LUN，就和主LUN构成一个新的Pair。
+
+l 同步
+将数据从主LUN拷贝至从LUN的过程。
+
+l 双写
+将主LUN的写I/O同步写入从LUN的过程。
+
+l 分裂
+停止主LUN和从LUN之间的双写状态，使从LUN数据成为与主LUN数据在分裂时间点完全一致的可用副本。
+
+l 反向同步
+将数据由从LUN拷贝至主LUN的过程。
+
+l 增量拷贝
+在进行同步或者反向同步时，仅拷贝新增或更改过的数据。
 ## RAID2.0+
 RAID2.0+当中性能好的方面体现在哪里？主要是以下几个方面。
 
