--- a/k8s/笔记/存储.md
+++ b/k8s/笔记/存储.md
@@ -493,6 +493,13 @@ l 反向同步
 
 l 增量拷贝
 在进行同步或者反向同步时，仅拷贝新增或更改过的数据。
+
+远程复制、克隆和一致性组的关系如下：
+
+远程复制和一致性组只能在阵列间实现，克隆只能在阵列内实现。
+远程复制包括Pair和远程复制一致性组两类对象，而克隆仅有Pair对象。
+一致性组能够对组中的所有远程复制进行统一管理。当一致性组进行同步、分裂或主从切换操作时，组中的所有远程复制也同时进行同步、分裂或主从切换操作，从而保证多个LUN之间复制数据的一致性。
+
 ## RAID2.0+
 RAID2.0+当中性能好的方面体现在哪里？主要是以下几个方面。
 
