--- a/安全/安全.md
+++ b/安全/安全.md
@@ -153,3 +153,7 @@ sftp 单通道 默认端口22 单通道承载了 控制和数据协议
 ## IP 报文头部
 
 trcert  基于修改 ttl值探测网络传输路径
+
+# 信息安全
+网络韧性：网络运行过程中面对各种威胁条件下还能继续提供服务的能力
+业务韧性：威胁条件下快速恢复业务的能力
