--- a/安全/安全.md
+++ b/安全/安全.md
@@ -157,3 +157,41 @@ trcert  基于修改 ttl值探测网络传输路径
 # 信息安全
 网络韧性：网络运行过程中面对各种威胁条件下还能继续提供服务的能力
 业务韧性：威胁条件下快速恢复业务的能力
+
+安全韧性目标：
+- 业务安全规划
+- 威胁防御能力
+- 快速恢复能力
+  
+对应规范活方法论：
+TCSEC：桔皮书计算机系统安全等级指南
+ISO/IEC :安全评估
+等级保护制度:达到对应的安全等级基线
+
+入侵检测设备：
+- 防火墙
+- WAF 设备
+- NIP
+
+# 安全攻击防御技术
+攻击动机：炫耀，利益
+
+潜在攻击：国家黑客、竞争对手、员工报复、个人黑客、黑客组织
+
+## 场常见攻击方式
+- DDos攻击
+- SQL漏洞
+- XSS脚本攻击
+- 0-day 漏洞攻击
+- 病毒攻击
+- 入侵
+  
+
+
+# GDPR：
+
+
+# 一些问题
+
+- APT是什么？
+  
