--- a/安全/安全.md
+++ b/安全/安全.md
@@ -201,7 +201,27 @@ ISO/IEC :安全评估
 
 # GDPR：
 
+## 社会工程学
 
+
+##  安全技术发展趋势
+
+十大安全技术：
+- 1.微分段
+- 2.远程浏览技术
+- 3.欺骗技术
+- 4.断点检测与响应
+- 5.容器安全
+- 6.网络流量分析
+- 7.云访问安全代理
+- 8.管理检测与响应
+- 9.软件定义边界
+- 10云工作负载保护平台
+
+趋势一：安全服务化
+二终端检测重要性
+三 IP流量管控 向应用层转变
+四 软件定义解决方案
 # 一些问题
 
 - APT是什么？
