--- a/安全/安全.md
+++ b/安全/安全.md
@@ -207,7 +207,7 @@ ISO/IEC :安全评估
 ##  安全技术发展趋势
 
 十大安全技术：
-- 1.微分段
+- 1.微分段 
 - 2.远程浏览技术
 - 3.欺骗技术
 - 4.断点检测与响应
@@ -218,10 +218,22 @@ ISO/IEC :安全评估
 - 9.软件定义边界
 - 10云工作负载保护平台
 
+
 趋势一：安全服务化
 二终端检测重要性
 三 IP流量管控 向应用层转变
 四 软件定义解决方案
+
+## 操作系统与主机安全
+
+### windows
+
+### linux
+
+常用的服务器软件：
+
+文件服务器：
+
 # 一些问题
 
 - APT是什么？
@@ -229,3 +241,9 @@ ISO/IEC :安全评估
 - 戴明环
 
 - 现在有哪些Ddos 防御设备
+
+# 材料
+
+华为官方论坛：华安 -anti-ddos
+
+
