--- a/安全/安全.md
+++ b/安全/安全.md
@@ -230,13 +230,30 @@ ISO/IEC :安全评估
 
 ### linux
 
+## iptables 
+
+
 ## 杀毒软件技术
+杀毒软件组成：
+- 扫描器
+  作用是 从很多文件中找到病毒文件
+
+- 病毒库
+  记录识别病毒
+- 虚拟机 
+  真正查杀是在虚拟机上执行的
 
 ### 脱壳技术
 
 ### 自我保护技术
 怎么实现？
-### 修复技术
+### 修复技术 
+修复被病毒损害的文件
+### 实时自动更新
+
+### 主动防御技术
+
+# 网络安全基础
 
 
 常用的服务器软件：
