--- a/k8s/笔记/视频.md
+++ b/k8s/笔记/视频.md
@@ -21,3 +21,19 @@
 ## 7.常见问题
 
 ## 8.参考资料
+
+
+
+
+
+```
+lftp -u ftpuser,ftpuser -e "set ftp:charset gbk;set file:charset utf-8;mirror -R -c --Remove-source-files  --parallel=5 ${root_path} ${thrird_ftp_upload_path} ;exit"  sftp://${thrird_ftp_host}
+
+
+
+lftp 192.168.99.205 -u ftpuser,ftpuser -e 'set ssl:verify-certificate no;mirror -R -c --parallel=5 Gate2123 Gate2123; exit;'
+
+
+
+time dd if=/dev/sdb of=/testrw.dbf bs=4k
+```
