--- a/安全/安全.md
+++ b/安全/安全.md
@@ -265,6 +265,18 @@ ISO/IEC :安全评估
 
 # 入侵概述
 
+黑客分两种信息：一种是知道自己被黑的人和不知道自己被黑的人
+
+
+拒绝服务攻击：
+- UDP flood
+- SYN Flood
+- ICMP  flood
+-  僵尸网络攻击
+
+
+病毒攻击：
+
 
 缺陷：
 无法实现主备防火墙的状态一致性
