--- a/安全/安全.md
+++ b/安全/安全.md
@@ -277,6 +277,29 @@ ISO/IEC :安全评估
 
 病毒攻击：
 
+入侵检测：
+
+入侵防御系统：
+
+病毒简介：
+
+病毒：
+
+蠕虫：
+
+木马
+
+网关防病毒：
+1.代理扫描技术
+2.流扫描方式
+
+检测到病毒后的响应动作：
+- 告警
+- 阻断
+- 宣告
+- 删除附件
+
+
 
 缺陷：
 无法实现主备防火墙的状态一致性
