--- a/安全/安全.md
+++ b/安全/安全.md
@@ -300,6 +300,28 @@ ISO/IEC :安全评估
 - 删除附件
 
 # 加密
+加密技术：
+- 对称加密
+- 非对称加密
+  
+# 证书
+
+## 数字证书
+
+证书类型：
+- 自签名证书
+- CA证书
+- 本地证书
+- 设备本地证书
+  - 颁发者是CA
+
+- 加密解决的问题
+   - 浏览器 网络传输
+
+
+
+
+公钥加密：
 
 
 缺陷：
