--- a/安全/安全.md
+++ b/安全/安全.md
@@ -368,7 +368,9 @@ ping
 - 端口扫描  superscan 
   nmap
 - 漏洞扫描   sparta
-- 应用扫描 Burp suite
+- 应用扫描 Burp suite 利用payload
+  - 可以查看客户端漏洞
+  - 服务端漏洞：sql 注入
   
 
 # 一些问题
