--- a/安全/安全.md
+++ b/安全/安全.md
@@ -379,8 +379,14 @@ ping
 -  成功审核
 -  失败审核
 # 数据分析
+## 日志分析
+- who 用户类型
+- when 什么时间点登录设备
+- where  设备
+- how  是通过那种方式接入网络
+- what 访问那些资源
 
-
+外部设置使用事件：
 
 # 一些问题
 
