--- a/安全/安全.md
+++ b/安全/安全.md
@@ -388,6 +388,14 @@ ping
 
 外部设置使用事件：
 
+日志分析工具：
+- Log Parser 功能强大日志分析
+- log Parser Lizard 图形化界面
+
+电子取证：
+- 电子证据
+  - 电子取证过程
+  - 电子取证技术
 # 一些问题
 
 - APT是什么？
