--- a/安全/安全.md
+++ b/安全/安全.md
@@ -396,6 +396,28 @@ ping
 - 电子证据
   - 电子取证过程
   - 电子取证技术
+    - 网络抓包
+    - 日志分析
+    - 蜜罐取证
+
+电子证据特点：
+-  电子证据容易被修改
+-  不是单一的数据
+-  无形性
+   -  法规
+      -  公安机关电子
+      -  未完成。。。
+- 取证：
+  - 保护现场
+  - 获取证据
+    - 硬件工具  
+      - 硬盘复制机
+      - 硬盘只读锁- 防止硬盘数据被篡改
+      - 取证一体机
+      - 取证塔
+      - 介质修复设备
+    - 软件工具
+
 # 一些问题
 
 - APT是什么？
