--- a/安全/安全.md
+++ b/安全/安全.md
@@ -397,8 +397,20 @@ ping
   - 电子取证过程
   - 电子取证技术
     - 网络抓包
+      - wireshark
+      - sniffer
+      - tcpdump
     - 日志分析
     - 蜜罐取证
+    - 隐蔽代码取证
+    - 数据挖掘技术
+  - 新型取证技术
+    - 芯片取证
+      - tap 端口  
+    - 云取证
+    - 物联网取证
+    - 边信道攻击
+      - 取证是指周围功率、磁场等
 
 电子证据特点：
 -  电子证据容易被修改
@@ -417,6 +429,14 @@ ping
       - 取证塔
       - 介质修复设备
     - 软件工具
+- 保全
+  - 证据保全技术
+    - 加密技术
+    - 数字信封数字签名
+    - 数字证书
+    - 时间戳
+- 鉴定
+  - 
 
 # 一些问题
 
