--- a/安全/安全.md
+++ b/安全/安全.md
@@ -429,6 +429,13 @@ ping
       - 取证塔
       - 介质修复设备
     - 软件工具
+  - 取证追踪技术
+    - 日志分析
+      - 操作系统日志
+      - 防火墙日志
+      - 应用软件日志
+    - 设置蜜罐
+    - 可以通过采用相关设备跟踪捕捉
 - 保全
   - 证据保全技术
     - 加密技术
