--- a/安全/安全.md
+++ b/安全/安全.md
@@ -443,8 +443,43 @@ ping
     - 数字证书
     - 时间戳
 - 鉴定
-  - 
 
+
+# 网络安全事件分类
+  - 有害程序事件
+  - 网络攻击事件
+  - 信息破坏事件
+  - 灾害性事件
+  - 设备设施故障
+  - 信息内容安全事件
+  # 网络安全事件等级
+  - 特别重大的网络安全事件
+  - 重大
+  - 较大
+  - 一般
+  # 预警等级
+    - 红色
+    - 橙色
+    - 黄色
+    - 蓝色
+  # 应急响应等级
+    - 一级
+    - 二级
+    - 三级
+    - 四级
+  # mpdrr 响应模型
+  是一个常见的具有纵深防御的体系的网络安全模型。包含了管理、  防护、检测、响应、恢复5个环节。是在pdrr的基础上加入管理环节，从而将技术和管理融为一体
+  # 应急响应形式
+    - 远程应急响应 （首先）
+    - 本地应急响应
+
+
+
+
+
+一些组织
+  - 国家互联网应急中心
+  - 
 # 一些问题
 
 - APT是什么？
@@ -461,5 +496,8 @@ syslog - 回话日志 丢包功能
 # 材料
 
 华为官方论坛：华安 -anti-ddos
+
+# 法律
+- 中华人民共和国网络安全法 -- 是大纲性法律，需要和其他法律配合使用
 
 
