--- a/安全/安全.md
+++ b/安全/安全.md
@@ -496,6 +496,8 @@ syslog - 回话日志 丢包功能
 # 材料
 
 华为官方论坛：华安 -anti-ddos
+## 一些网站
+- 黑客技术 https://gitee.com/Glacier1043/projects
 
 # 法律
 - 中华人民共和国网络安全法 -- 是大纲性法律，需要和其他法律配合使用
