--- a/安全/安全.md
+++ b/安全/安全.md
@@ -1,6 +1,11 @@
 # 1.网络安全：
 
+什么是网络安全？
+
+
+
 ## 1.1软件方案
+
 常见防御体系：
 - 边界防御体系。 就是在网络边界部署防护体系，一旦被攻破就畅通无阻
 -  纵深防御体系 。 本质就是多层防御：网络边界-》网络层-》服务器端-》数据库端。
@@ -171,6 +176,7 @@ trcert  基于修改 ttl值探测网络传输路径
 - 威胁防御能力
 - 快速恢复能力
   
+
 对应规范活方法论：
 TCSEC：桔皮书计算机系统安全等级指南
 ISO/IEC :安全评估
@@ -372,6 +378,7 @@ ping
   - 可以查看客户端漏洞
   - 服务端漏洞：sql 注入
   
+
 日志事件：
 - 信息事件
 - 告警事件
@@ -501,5 +508,4 @@ syslog - 回话日志 丢包功能
 
 # 法律
 - 中华人民共和国网络安全法 -- 是大纲性法律，需要和其他法律配合使用
-
 
