--- a/架构设计/技术项目.md
+++ b/架构设计/技术项目.md
@@ -1,6 +1,6 @@
 # 现有的技术方案：
 
-## 1.springcloud 方案
+## 1.SpringCloud 方案
 
 1.mall4cloud  （电商项目）
 
@@ -13,3 +13,5 @@ https://gitee.com/gz-yami/mall4cloud
 适用场景：
 
 如何部署：
+
+2.图像识别
