--- a/安全/网络安全.md
+++ b/安全/网络安全.md
@@ -3,5 +3,19 @@
 2.信息泄露是当今网络常见的信息安全事件
 
 
+#网络知名供应商
+1.Gartner
+Gartner是一家世界领先的研究与顾问公司，从全球化视野出发，针对企业所有重大
+业务职能领域，提供深入的业务与技术洞察。
+
+# 网络攻击：
+
+
+# 网络安全防御
+## 网络安全态势感知
+网络安全态势感知是：一种基于环境动态地，整体地洞悉风险的能力，他是利用数据融合、数据挖掘、智能分析和可视化等技术。直观显示网络安全环境的实时安全状况，网络安全保障提供技术支撑。
+
+## DDos攻击
+
 
 
