--- a/安全/网络安全.md
+++ b/安全/网络安全.md
@@ -8,6 +8,12 @@
 Gartner是一家世界领先的研究与顾问公司，从全球化视野出发，针对企业所有重大
 业务职能领域，提供深入的业务与技术洞察。
 
+# 信息安全组织
+• ISO是一个全球性的非政府组织，是国际标准化领域中一个十分重要的组织。ISO负责
+目前绝大部分领域（包括军工、石油和船舶等垄断行业）的标准化活动。
+• IEC是世界上成立最早的国际性电工标准化机构，负责有关电气工程和电子工程领域
+中的国际标准化工作。
+
 # 网络攻击：
 
 
