--- a/安全/网络安全.md
+++ b/安全/网络安全.md
@@ -107,6 +107,15 @@ ASPF： Applicaition Specific Packet fileter 是针对应用层的过滤。
 单通道协议：通信过程只占用一个端口
 多通道协议：通信占用多个端口
 
+### 应用场景
+- 云计算
+- 校园网，在
+### 防火墙地址转换技术
+1. 源NAT技术
+   1. No-PAT 不转换端口，适用于上网人数数少
+   2. NPAT 转IP地址和端口  适用于，公司外网IP少，需要上网的人多
+
+
 
 ## 路由器
 同网段或跨网段通信设备，用于转发流量，构成网络的基础设备
