--- a/安全/网络安全.md
+++ b/安全/网络安全.md
@@ -115,7 +115,9 @@ ASPF： Applicaition Specific Packet fileter 是针对应用层的过滤。
    1. No-PAT 不转换端口，适用于上网人数数少
    2. NPAT 转IP地址和端口  适用于，公司外网IP少，需要上网的人多
 
-
+2. 双向NAT主要应用在以下两个场景：
+▫ 外网用户访问内部服务器；
+▫ 私网用户访问内部服务器。
 
 ## 路由器
 同网段或跨网段通信设备，用于转发流量，构成网络的基础设备
