--- a/安全/网络安全.md
+++ b/安全/网络安全.md
@@ -118,7 +118,10 @@ ASPF： Applicaition Specific Packet fileter 是针对应用层的过滤。
 2. 双向NAT主要应用在以下两个场景：
 ▫ 外网用户访问内部服务器；
 ▫ 私网用户访问内部服务器。
-
+• 当NAT Server的global地址与公网接口地址不在同一网段时，必须配置黑洞路由；
+• 当NAT Server的global地址与公网接口地址在同一网段时，建议配置黑洞路由；
+• 当NAT Server的global地址与公网接口地址一致时，不会产生路由环路，不需要配置
+黑洞路由
 ## 路由器
 同网段或跨网段通信设备，用于转发流量，构成网络的基础设备
 
