--- a/安全/网络安全.md
+++ b/安全/网络安全.md
@@ -122,6 +122,9 @@ ASPF： Applicaition Specific Packet fileter 是针对应用层的过滤。
 • 当NAT Server的global地址与公网接口地址在同一网段时，建议配置黑洞路由；
 • 当NAT Server的global地址与公网接口地址一致时，不会产生路由环路，不需要配置
 黑洞路由
+
+双机热备技术：
+
 ## 路由器
 同网段或跨网段通信设备，用于转发流量，构成网络的基础设备
 
