--- a/安全/网络安全.md
+++ b/安全/网络安全.md
@@ -124,6 +124,8 @@ ASPF： Applicaition Specific Packet fileter 是针对应用层的过滤。
 黑洞路由
 
 双机热备技术：
+VGMP（VRRP Group Management Protocol）是VRRP组管理协议，该协议定义了
+VGMP组，防火墙基于VGMP组实现设备主备状态管理。
 
 ## 路由器
 同网段或跨网段通信设备，用于转发流量，构成网络的基础设备
