--- a/安全/网络安全.md
+++ b/安全/网络安全.md
@@ -123,7 +123,12 @@ ASPF： Applicaition Specific Packet fileter 是针对应用层的过滤。
 • 当NAT Server的global地址与公网接口地址一致时，不会产生路由环路，不需要配置
 黑洞路由
 
+
 双机热备技术：
+VRRP
+当防火墙上多个区域需要提供双机备份功能时，需要在一台防火墙上配置多个VRRP
+备份组。
+
 VGMP（VRRP Group Management Protocol）是VRRP组管理协议，该协议定义了
 VGMP组，防火墙基于VGMP组实现设备主备状态管理。
 
