--- a/安全/网络安全.md
+++ b/安全/网络安全.md
@@ -130,7 +130,12 @@ VRRP
 备份组。
 
 VGMP（VRRP Group Management Protocol）是VRRP组管理协议，该协议定义了
-VGMP组，防火墙基于VGMP组实现设备主备状态管理。
+VGMP组，防火墙基于VGMP组实现设备主备状态管理。 
+- 状态一致管理 VGMP 管理组控制所有的备份组统一切换，VRRP备份组加入到管理组后状态不能单独切换
+- 抢占管理 
+
+HRP 
+心跳线两端通常是为了了解对方状态、备份配置命令和各种表项的通道。心跳线两端的接口通常称之为心跳接口，心跳接口可以是一个物理接口也可以是多个物理口困成一个逻辑接口
 
 ## 路由器
 同网段或跨网段通信设备，用于转发流量，构成网络的基础设备
