--- a/安全/网络安全.md
+++ b/安全/网络安全.md
@@ -136,6 +136,41 @@ VGMP组，防火墙基于VGMP组实现设备主备状态管理。
 
 HRP 
 心跳线两端通常是为了了解对方状态、备份配置命令和各种表项的通道。心跳线两端的接口通常称之为心跳接口，心跳接口可以是一个物理接口也可以是多个物理口困成一个逻辑接口
+• 心跳线主要传递如下消息：
+▫ HRP Hello报文：两台防火墙通过定期（默认周期为1秒）互相发送心跳报文检
+测对端设备是否存活，也称为HRP心跳报文；
+▫ VGMP Hello报文：了解对端设备的VGMP组的状态，确定本端和对端设备当前
+状态是否稳定，是否要进行故障切换；
+▫ HRP数据报文：用于两台防火墙同步配置命令和状态信息；
+▫ 心跳链路探测报文：用于检测对端设备的心跳口能否正常接收本端设备的报文，
+确定是否有心跳接口可以使用；
+▫ 配置一致性检查报文：用于检测两台防火墙的关键配置是否一致，如安全策略、
+NAT等；
+▫ 上述报文均不受防火墙的安全策略控制。因此，不需要针对这些报文配置安全
+策略。
+
+通常情况下，备份数据流量约为业务流量的20%～30%，请根据备份数据量的大小选
+择捆绑物理接口的数量。
+心跳接口状态：
+ Invalid：当本端防火墙上的心跳口配置错误时显示此状态（物理状态up，协议状态
+down），例如指定的心跳口为二层接口或未配置心跳接口的IP地址。
+• Down：当本端防火墙上的心跳口的物理与协议状态均为down时，则会显示此状态。
+• Peerdown：当本端防火墙上的心跳口的物理与协议状态均为up时，则心跳口会向对
+端对应的心跳口发送心跳链路探测报文。如果收不到对端响应的报文，那么防火墙会
+设置心跳接口状态为Peerdown。但是心跳口还会不断发送心跳链路探测报文，以便
+当对端的对应心跳口up后，该心跳链路能处于连通状态。
+• Ready：当本端防火墙上的心跳口的物理与协议状态均为up时，则心跳口会向对端对
+应的心跳口发送心跳链路探测报文。如果对端心跳口能够响应此报文（也发送心跳链
+路探测报文），那么防火墙会设置本端心跳接口状态为ready，随时准备发送和接受
+心跳报文。这时心跳口依旧会不断发送心跳链路探测报文，以保证心跳链路的状态正
+常。
+• Running：当本端防火墙有多个处于ready状态的心跳口时，防火墙会选择最先配置
+的心跳口形成心跳链路，并设置此心跳口的状态为Running。如果只有一个处于
+Ready状态的心跳口，那么它自然会成为状态为Running的心跳口。状态为Running
+的接口负责发送HRP心跳报文、HRP数据报文、HRP链路探测报文、VGMP报文和一
+致性检查报文。这时其余处Ready状态的心跳口处于备份状态，当处于Running状态
+的心跳口或心跳链路故障时，其余处于Ready状态的心跳口依次（按配置先后顺序）
+接替当前心跳口处理业务。
 
 ## 路由器
 同网段或跨网段通信设备，用于转发流量，构成网络的基础设备
