--- a/k8s/linux/视频转码.md
+++ b/k8s/linux/视频转码.md
@@ -4,6 +4,31 @@ Ffmpeg
 
 
 
+安装：Centos7快速安装FFMPEG
+
+```
+sudo yum install -y epel-release rpm
+
+sudo rpm --import /etc/pki/rpm-gpg/RPM-GPG-KEY-EPEL-7 
+
+sudo rpm --import http://li.nux.ro/download/nux/RPM-GPG-KEY-nux.ro 
+
+sudo rpm -Uvh http://li.nux.ro/download/nux/dextop/el7/x86_64/nux-dextop-release-0-1.el7.nux.noarch.rpm
+
+sudo yum install -y ffmpeg
+
+ffmpeg -version
+
+https://blog.csdn.net/weixin_37659332/article/details/105051585
+```
+
+
+
+
+ 
+
+
+
 ```
 ffmpeg -re -stream_loop -1 -i MV.mp4 -vcodec copy -acodec copy -f flv rtmp://localhost:1935/test/live
 ```
