--- a/k8s/linux/自定义服务.md
+++ b/k8s/linux/自定义服务.md
@@ -90,3 +90,32 @@ ExecStop
 
 ExecStopPost
 服务停止后执行。
+
+## 服务守护进程
+
+ftp_agent.service 配置如下：
+
+```
+[Unit]
+Description=ftp_agent
+After=network.target remote-fs.target
+
+[Service]
+Type=simple
+User=root
+WorkingDirectory=/home/htkj/agent
+ExecStart=/usr/bin/nohup  /usr/local/jdk8/bin/java -jar /home/soft/ftpagent-0.0.1.jar > /dev/null 2>&1 &
+ExecStop=
+KillMode=process
+Restart=on-failure
+RestartSec=30s
+
+[Install]
+WantedBy=multi-user.target
+```
+
+添加守护进程如下：
+
+Restart=on-failure  表示失败后重启
+RestartSec=30s  失败30s后重启
+
