--- a/k8s/linux/自定义服务.md
+++ b/k8s/linux/自定义服务.md
@@ -105,7 +105,8 @@ Type=simple
 User=root
 WorkingDirectory=/home/htkj/agent
 ExecStart=/usr/bin/nohup  /usr/local/jdk8/bin/java -jar /home/soft/ftpagent-0.0.1.jar > /dev/null 2>&1 &
-ExecStop=
+ExecReload=/bin/kill -USR2 $MAINPID
+ExecStop=/bin/kill -SIGINT $MAINPID
 KillMode=process
 Restart=on-failure
 RestartSec=30s
@@ -118,4 +119,26 @@ WantedBy=multi-user.target
 
 Restart=on-failure  表示失败后重启
 RestartSec=30s  失败30s后重启
+
+系统服务目录 
+
+cd /usr/lib/systemd/system/
+
+设置权限
+
+ chmod 775  ftp_agent.service
+
+ systemctl daemon-reload
+
+设置自启动
+
+ systemctl enable ftp_agent.service
+
+启动服务
+
+  systemctl start ftp_agent.service
+
+查看是否启动：
+
+ systemctl status ftp_agent.service, 
 
