--- a/k8s/linux/自定义服务.md
+++ b/k8s/linux/自定义服务.md
@@ -91,7 +91,7 @@ ExecStop
 ExecStopPost
 服务停止后执行。
 
-## 服务守护进程
+## 服务自动重启进程
 
 ftp_agent.service 配置如下：
 
@@ -115,7 +115,7 @@ RestartSec=30s
 WantedBy=multi-user.target
 ```
 
-添加守护进程如下：
+添加自动重启如下：
 
 Restart=on-failure  表示失败后重启
 RestartSec=30s  失败30s后重启
@@ -140,5 +140,15 @@ cd /usr/lib/systemd/system/
 
 查看是否启动：
 
- systemctl status ftp_agent.service, 
+ systemctl status ftp_agent.service
+
+
+
+注意：[Service]部分的启动、重启、停止命令必须使用绝对路径，使用相对路径则会报错
+
+### 服务自动重启和linxu守护进程
+
+Service 自带重启机制，当服务遇到异常退出会重启。
+
+可以利用linux 守护进程监控服务是否正常，从而判断是否需要重启。
 
