--- a/k8s/linux/自定义服务.md
+++ b/k8s/linux/自定义服务.md
@@ -4,6 +4,14 @@
 
 这个脚本分为3个部分：[Unit] [Service] [Install]。
 
+Systemd 目录
+Unit 文件按照 Systemd 约定，应该被放置指定的三个系统目录之一中。这三个目录是有优先级的，如下所示，越靠上的优先级越高。因此，在三个目录中有同名文件的时候，只有优先级最高的目录里的那个文件会被使用。
+
+/etc/systemd/system：系统或用户自定义的配置文件
+/run/systemd/system：软件运行时生成的配置文件
+/usr/lib/systemd/system：系统或第三方软件安装时添加的配置文件。
+Systemd 默认从目录 /etc/systemd/system/ 读取配置文件。但是，里面存放的大部分文件都是符号链接，指向目录 /usr/lib/systemd/system/，真正的配置文件存放在那个目录。 
+
 ### Unit
 
 Unit表明该服务的描述，类型描述。我们称之为一个单元。比较典型的情况是单元A要求在单元B启动之后再启动。这种设置是通过Unit下面的Requires、After、Before、Wants来调整的。比如上述场景的编写可以这样（在A中编写）：
@@ -91,7 +99,28 @@ ExecStop
 ExecStopPost
 服务停止后执行。
 
+
+
 ## 服务自动重启进程
+
+重启行为
+
+RestartSec：Systemd 重启当前服务间隔的秒数
+KillMode：定义 Systemd 如何停止服务，可能的值包括：
+control-group（默认值）：当前控制组里面的所有子进程，都会被杀掉
+process：只杀主进程（sshd 服务，推荐值）
+mixed：主进程将收到 SIGTERM 信号，子进程收到 SIGKILL 信号
+none：没有进程会被杀掉，只是执行服务的 stop 命令。
+Restart：定义何种情况 Systemd 会自动重启当前服务，可能的值包括：
+no（默认值）：退出后不会重启
+on-success：只有正常退出时（退出状态码为0），才会重启
+**on-failure：非正常退出时（退出状态码非0），包括被信号终止和超时，才会重启（守护进程，推荐值）**
+on-abnormal：只有被信号终止和超时，才会重启（对于允许发生错误退出的服务，推荐值）
+on-abort：只有在收到没有捕捉到的信号终止时，才会重启
+on-watchdog：超时退出，才会重启
+always：不管是什么退出原因，总是重启 
+
+cd /usr/lib/systemd/system/
 
 ftp_agent.service 配置如下：
 
@@ -142,9 +171,32 @@ cd /usr/lib/systemd/system/
 
  systemctl status ftp_agent.service
 
-
-
 注意：[Service]部分的启动、重启、停止命令必须使用绝对路径，使用相对路径则会报错
+
+http://www.ruanyifeng.com/blog/2016/03/systemd-tutorial-part-two.html
+
+### 服务监控手段
+
+journalctl -u ftp_agent.service 查看服务错误日志
+
+##### 查看启动耗时
+systemd-analyze                                                                                       
+
+##### 查看每个服务的启动耗时
+systemd-analyze blame
+
+##### 显示瀑布状的启动过程流
+ systemd-analyze critical-chain
+
+##### 显示指定服务的启动流
+systemd-analyze critical-chain atd.service
+
+
+查看服务是否开机启动：systemctl is-enabled vsftpd.service
+
+查看已启动的服务列表：systemctl list-unit-files|grep enabled
+
+查看启动失败的服务列表：systemctl --failed
 
 ### 服务自动重启和linxu守护进程
 
