--- a/k8s/linux/自定义服务.md
+++ b/k8s/linux/自定义服务.md
@@ -134,8 +134,8 @@ Type=simple
 User=root
 WorkingDirectory=/home/htkj/agent
 ExecStart=/usr/bin/nohup  /usr/local/jdk8/bin/java -jar /home/soft/ftpagent-0.0.1.jar > /dev/null 2>&1 &
-ExecReload=/bin/kill -USR2 $MAINPID
-ExecStop=/bin/kill -SIGINT $MAINPID
+ExecReload=/bin/kill -s HUP $MAINPID
+ExecStop=/bin/kill -s TERM $MAINPID
 KillMode=process
 Restart=on-failure
 RestartSec=30s
