--- a/安全/安全.md
+++ b/安全/安全.md
@@ -308,8 +308,9 @@ ISO/IEC :安全评估
 # 加密
 加密技术：
 - 对称加密
+  - 效率高、算法简单、系统开销少、适合加密大量数据
 - 非对称加密
-  
+  - 无法从一个秘钥推导出另外一个秘钥，公钥的加密信息只能用另一个的私钥进行解密。
 # 证书
 
 ## 数字证书
