--- a/安全/安全.md
+++ b/安全/安全.md
@@ -309,8 +309,19 @@ ISO/IEC :安全评估
 加密技术：
 - 对称加密
   - 效率高、算法简单、系统开销少、适合加密大量数据
+  - 常见对称加密算法
+    - DES  基本弃用
+    - 3DES 使用128位，最大的优点是可以使用已经存在的软件和硬件，并且在DES加密的算法上的技术可以轻松实现3DES
+    - AES 采用128位分组长度，支持长度位128位、192位、256位、和384位的秘钥长度，128位能提供足够的安全性，但是AES 取代DES和3DES以增强安全性和效率已经是大势所趋。
+    - 国密算法
+      - 是由国家密码管理局编制的一种商用标准对称算法，国密算法的分组长度和秘钥长度都是128位。在安全级别要求高的情况下使用SM1或者SM4国密算法可以充分满足加密需求。
+    - idea 输入铭文64位，秘钥为128位，生成6密文4位。其中ssl将idea算法包含其中。
 - 非对称加密
   - 无法从一个秘钥推导出另外一个秘钥，公钥的加密信息只能用另一个的私钥进行解密。
+  - 常见非对称加密算法
+    - DH 算法在IPSec中尤其重要，用于解决秘钥交换的问题
+    - RSA 既能实现数字签名 又能实现加解密
+    - DSA 数字签名算法，仅能实现数字签名，不能用于加密。
 # 证书
 
 ## 数字证书
