--- a/安全/安全.md
+++ b/安全/安全.md
@@ -320,8 +320,15 @@ ISO/IEC :安全评估
   - 无法从一个秘钥推导出另外一个秘钥，公钥的加密信息只能用另一个的私钥进行解密。
   - 常见非对称加密算法
     - DH 算法在IPSec中尤其重要，用于解决秘钥交换的问题
-    - RSA 既能实现数字签名 又能实现加解密
+    - RSA 既能实现数字签名 又能实现加解密。
     - DSA 数字签名算法，仅能实现数字签名，不能用于加密。
+  -  散列算法
+     -  双方进行hash 通过对比两个hash值来判断有么有被篡改
+     - 常见散列算法
+       - SHA
+       - MD5
+       - SM3
+   - 
 # 证书
 
 ## 数字证书
