--- a/安全/安全.md
+++ b/安全/安全.md
@@ -359,7 +359,7 @@ PKI 体系架构
 ## 数字签名
 是对私钥加密，
 ## 数字证书
-是确定身份的问题
+是确定身份的问题，提供的是网络上的身份证明，是证书认证机构的签名文件，包含拥有者的公钥和身份信息，数字证书解决的是无法确定公钥是指定拥有者的问题
 
 VPN
 虚拟专有网络
