--- a/安全/安全.md
+++ b/安全/安全.md
@@ -362,7 +362,15 @@ PKI 体系架构
 是确定身份的问题，提供的是网络上的身份证明，是证书认证机构的签名文件，包含拥有者的公钥和身份信息，数字证书解决的是无法确定公钥是指定拥有者的问题
 - ca 证书 ，ca自身的证书
 - 本地证书 CA颁发给申请者的证书
-- 自签名证书。设备为自己颁发的证书，由设备预置CA进行签名
+- 自签名证书。设备为自己颁发的证书，由设备预置CA进行签名，通过设备生成自签名证书和不带签名证书，可以实现简单的证书颁发功能。
+
+### 数字证书的格式
+- PKCS#12
+  - 以二进制格式保存证书，可以包含私钥和不包含私钥，常用后缀.p12和.pfx
+- DER 
+  - 以二进制保存证书，不包含私钥。常用后缀.der .cer .crt
+- PEM 
+  - 以ASCII 格式保存证书，可以包含私钥也可以不包含私钥。常用的后缀有，.pem .cer .crt
 
 VPN
 虚拟专有网络
