--- a/安全/安全.md
+++ b/安全/安全.md
@@ -371,6 +371,11 @@ PKI 体系架构
   - 以二进制保存证书，不包含私钥。常用后缀.der .cer .crt
 - PEM 
   - 以ASCII 格式保存证书，可以包含私钥也可以不包含私钥。常用的后缀有，.pem .cer .crt
+### 数据通信全过程
+
+
+## PKI 证书体系
+公钥技术和数字证书来提供系统信息安全服务，并负责验证数字证书持有者身份的一种认证体系。PKI的本质是把非对称秘钥管理标准化。
 
 VPN
 虚拟专有网络
