--- a/安全/安全.md
+++ b/安全/安全.md
@@ -375,9 +375,10 @@ PKI 体系架构
 
 
 ## PKI 证书体系
-公钥技术和数字证书来提供系统信息安全服务，并负责验证数字证书持有者身份的一种认证体系。PKI的本质是把非对称秘钥管理标准化。
+公钥技术和数字证书来提供系统信息安全服务，并负责验证数字证书持有者身份的一种认证体系。PKI的本质是把非对称秘钥管理标准化。 PKI技术保证的是验证的是归属问题，身份的合法性，从而保证用户接入合法安全的网络中
 
 - CA CA的核心功能就是发放管理数字证书，包括证书的颁发、证书的更新、证书的撤销、证书的查询、证书的归档、证书废除列表CRL的发布等。
+- 证书注册机构（RA）：是数字证书的注册审批机构，
 VPN
 虚拟专有网络
 
