--- a/安全/安全.md
+++ b/安全/安全.md
@@ -355,9 +355,11 @@ PKI 体系架构
 # 密码学
 
 ## 数字信封
+结合对称和非对称加密，从而保证数据传输的机密性。使用方式
 
 ## 数字签名
 是对私钥加密，
+使用散列保证数据保证数据完整性
 ## 数字证书
 是确定身份的问题，提供的是网络上的身份证明，是证书认证机构的签名文件，包含拥有者的公钥和身份信息，数字证书解决的是无法确定公钥是指定拥有者的问题
 - ca 证书 ，ca自身的证书
@@ -379,8 +381,28 @@ PKI 体系架构
 
 - CA CA的核心功能就是发放管理数字证书，包括证书的颁发、证书的更新、证书的撤销、证书的查询、证书的归档、证书废除列表CRL的发布等。
 - 证书注册机构（RA）：是数字证书的注册审批机构，
-VPN
+
+
+
+# VPN
 虚拟专有网络
+
+利用隧道技术对传输报文进行封装，利用VPN骨干网建立的专用传输通道，实现安全传输
+
+## vpn 分类
+- client-to-site:即客户端和企业内网之间的
+-  site-to-site  两个不同点的企业的互联
+
+##  根据VPN实现
+- 应用层 ssl vpn
+- 网络层 gre IP Sec  L3VPN
+- 数据链路层 
+  - pptp  
+  - l2f 
+  - l2tp 
+  - l2vpn
+
+
 
 公钥加密：
 
