--- a/安全/安全.md
+++ b/安全/安全.md
@@ -401,6 +401,12 @@ PKI 体系架构
   - l2f 
   - l2tp 
   - l2vpn
+- L3VPN
+  - 指VPN技术工作在协议栈的网络层
+- L2VPN指vpn技术工作在协议栈的数据链路层
+  - PPTP 点对点隧道协议
+  - L2F二层转发协议
+  - L2TP 二层隧道协议 Layer 2 Tuneling Protocol
 
 
 
