--- a/安全/安全.md
+++ b/安全/安全.md
@@ -408,6 +408,9 @@ PKI 体系架构
   - L2F二层转发协议
   - L2TP 二层隧道协议 Layer 2 Tuneling Protocol
 
+VPN原理：
+隧道技术：利用隧道是技术对传输的报文进行封装利用VPN骨干网络建立专用的数据传输通道，实现报文的传输。
+隧道技术是：VPN的基本技术，类似点对点技术。分支VPN网关收到报文之后，将报文封装，通过Internet传输到总部vpn网关，总部网关解封装，解封装之后就得到原始报文。
 
 
 公钥加密：
