--- a/安全/安全.md
+++ b/安全/安全.md
@@ -413,10 +413,12 @@ PKI 体系架构
 隧道技术是：VPN的基本技术，类似点对点技术。分支VPN网关收到报文之后，将报文封装，通过Internet传输到总部vpn网关，总部网关解封装，解封装之后就得到原始报文。
 所有被封装的报文在Internet上传输时经过的逻辑路径被称为隧道。
 
-####  身份认证技术
+####  vpn 身份认证技术
 - GRE 不支持针对用户的身份认证技术
-- L2TP 依赖PPP 提供的认证。对接用户认证的时候，可以使用本地认证或者使用第三方的RADIUS
-
+- L2TP 依赖PPP 提供的认证。对接用户认证的时候，可以使用本地认证或者使用第三方的RADIUS认证，认证通过后会给用户分配内部IP地址，通过此IP地址对用户进行管理和授权。
+- IP Sec：使用IKEv2时，支持对用户进行EAP认证。认证方式同L2TP,认证通过后分配IP地址，通过此IP地址对用户进行管理和授权。
+- SSL VPN：支持本地认证，证书认证和服务器认证。接入用户可以对ssl vpn 服务器进行身份认证，确认ssl vpn服务器的合法性。 
+#### vpn  加密技术
 
 公钥加密：
 
