--- a/安全/安全.md
+++ b/安全/安全.md
@@ -422,6 +422,9 @@ PKI 体系架构
 - GRE  和L2TP 不提供加密技术，常和IPSec 一起使用，依赖IPSec的加密技术。
 - IP Sec 支持对数据报文和协议报文进行加密
 - SSL VPN  支持对数据报文和协议报文进行加密
+#### vpn  数据验证技术
+采用摘要方式。
+摘要：采用通过Hash函数将一段长的报文通过函数变换，映射为一段短的报文。在收发两端进行验证只有摘要一致的报文才被接收。
 
 公钥加密：
 
