--- a/安全/安全.md
+++ b/安全/安全.md
@@ -420,6 +420,11 @@ PKI 体系架构
 - SSL VPN：支持本地认证，证书认证和服务器认证。接入用户可以对ssl vpn 服务器进行身份认证，确认ssl vpn服务器的合法性。 
 #### vpn  加密技术
 - GRE  和L2TP 不提供加密技术，常和IPSec 一起使用，依赖IPSec的加密技术。
+  解封装过程如下：
+  1.设备从连接私网的接口收到报文之后，检查报文头中的IP地址字段，在路由表中查找出接口，发现如果是隧道接口，则将报文转发给隧道模块去处理
+  2.首先根据乘客类型和当前的GRE隧道配置的校验参数，对报文进行GRE封装，添加GRE报文头
+  3.设备给报文添加传输报文头，即IP报文头
+
 - IP Sec 支持对数据报文和协议报文进行加密
 - SSL VPN  支持对数据报文和协议报文进行加密
 #### vpn  数据验证技术
