--- a/安全/安全.md
+++ b/安全/安全.md
@@ -424,6 +424,11 @@ PKI 体系架构
   1.设备从连接私网的接口收到报文之后，检查报文头中的IP地址字段，在路由表中查找出接口，发现如果是隧道接口，则将报文转发给隧道模块去处理
   2.首先根据乘客类型和当前的GRE隧道配置的校验参数，对报文进行GRE封装，添加GRE报文头
   3.设备给报文添加传输报文头，即IP报文头
+  4.根据设备添加的IP报文头的目的地址，在路由表中查找响应的接口，并发送报文。之后报文就在公网中传输。
+  5.接收端设备从公网收到报文之后，首先分析IP头报文，发现协议类型字段值为47之后表示GRE 协议，于是将报文交给GRE模块处理，去掉IP报文头和gre报文头，并根据GRE协议类型字段，发现报文乘客协议为私网中运行的协议，于是将报文交给该协议处理。
+
+  安全策略：
+  
 
 - IP Sec 支持对数据报文和协议报文进行加密
 - SSL VPN  支持对数据报文和协议报文进行加密
