--- a/安全/安全.md
+++ b/安全/安全.md
@@ -428,9 +428,10 @@ PKI 体系架构
   5.接收端设备从公网收到报文之后，首先分析IP头报文，发现协议类型字段值为47之后表示GRE 协议，于是将报文交给GRE模块处理，去掉IP报文头和gre报文头，并根据GRE协议类型字段，发现报文乘客协议为私网中运行的协议，于是将报文交给该协议处理。
 
   安全策略：
-  
+
 
 - IP Sec 支持对数据报文和协议报文进行加密
+  是IETF
 - SSL VPN  支持对数据报文和协议报文进行加密
 #### vpn  数据验证技术
 采用摘要方式。
