--- a/安全/安全.md
+++ b/安全/安全.md
@@ -416,7 +416,9 @@ PKI 体系架构
 ####  vpn 身份认证技术
 - GRE 不支持针对用户的身份认证技术
 - L2TP 依赖PPP 提供的认证。对接用户认证的时候，可以使用本地认证或者使用第三方的RADIUS认证，认证通过后会给用户分配内部IP地址，通过此IP地址对用户进行管理和授权。
-- IP Sec：使用IKEv2时，支持对用户进行EAP认证。认证方式同L2TP,认证通过后分配IP地址，通过此IP地址对用户进行管理和授权。
+- IPSec：使用IKEv2时，支持对用户进行EAP认证。认证方式同L2TP,认证通过后分配IP地址，通过此IP地址对用户进行管理和授权。
+体系结构主要由
+
 - SSL VPN：支持本地认证，证书认证和服务器认证。接入用户可以对ssl vpn 服务器进行身份认证，确认ssl vpn服务器的合法性。 
 #### vpn  加密技术
 - GRE  和L2TP 不提供加密技术，常和IPSec 一起使用，依赖IPSec的加密技术。
