--- a/安全/安全.md
+++ b/安全/安全.md
@@ -435,7 +435,14 @@ PKI 体系架构
 
 - IP Sec 支持对数据报文和协议报文进行加密
   是IETF
+  移动办公需要安装指定的客户端软件，网络部署和维护都比较麻烦。
 - SSL VPN  支持对数据报文和协议报文进行加密
+
+作为新型轻量级的远程接入方案，可以有效解决部署麻烦的问题等。
+
+使用场景：企业员工出差，需要使用外地远程办公，并期望能够通过internet随时访问企业内部资源。
+- SSL 封装位于传输层与各种应用层协议之间，为数据通讯提供安全支持，简历可靠的传输协议，之上，为高层协议提供数据封装、压缩、加密等基本支持。
+
 #### vpn  数据验证技术
 采用摘要方式。
 摘要：采用通过Hash函数将一段长的报文通过函数变换，映射为一段短的报文。在收发两端进行验证只有摘要一致的报文才被接收。
