--- a/安全/安全.md
+++ b/安全/安全.md
@@ -446,6 +446,12 @@ PKI 体系架构
 #### vpn  数据验证技术
 采用摘要方式。
 摘要：采用通过Hash函数将一段长的报文通过函数变换，映射为一段短的报文。在收发两端进行验证只有摘要一致的报文才被接收。
+#### IPsec VPN 配置：
+- 完成基本接口配置
+- 配置安全策略，允许私网指定网段进行报文交互，
+- 配置端到端内网的路由
+- 配置IPsec策略，包括配置IPSec策略的基本信息、配置待加密的数据流，配置安全题意的协商参数。
+
 
 公钥加密：
 
