--- a/安全/安全.md
+++ b/安全/安全.md
@@ -451,7 +451,13 @@ PKI 体系架构
 - 配置安全策略，允许私网指定网段进行报文交互，
 - 配置端到端内网的路由
 - 配置IPsec策略，包括配置IPSec策略的基本信息、配置待加密的数据流，配置安全题意的协商参数。
-
+#### SSL VPN 配置：
+- 完成接口基本配置
+- 配置用户和认证：配置认证域，创建用户组和用户
+- 配置SSL VPN虚拟网关
+- 配置web Link 功能
+- 配置角色授权
+- 配置安全策略
 
 公钥加密：
 
