--- a/安全/安全解决方案.md
+++ b/安全/安全解决方案.md
@@ -7,3 +7,5 @@ SOC 情报收集系统
 入侵检测 OSSEC 
 - 日志分析  通过日志分析，发现异常行为
 - 文件完整性检查。 监控关键文件的修改行为
+- Rootkit 检测。检测常见的rootkit行为
+- 动态响应。 根据日志分析文件完整性检测，或者rootkit 检测结果进行动态响应，包括单不限于防火墙封禁和账户禁用。
