--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -16,6 +16,15 @@
 - 分组封装格式
 - 分组转发规则
 
+### 路由协议
+路由协议是指定数据包转送数据包转送方式的网上协议。
+常见协议有：RIP，IGRP，EIGRP，
+无冲突协议： 令牌协议
+
+CSMA/CD 协议
+
+RFID：是什么？
+利用电磁或者电感信好，射频识别
 
 ## 性能指标：
 
