--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -47,5 +47,23 @@ ATKKping 可以快速检测目标主机到本机的网络状态
 
 
 
+## Vlan
+
+创建 vlan
+
+```
+vlam 10
+#查看vlan
+dis vlan 
+# 配置vlan
+int  g0/0/1
+port link-type access
+
+```
+
+
+
+
+
 
 
