--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -72,6 +72,24 @@ port link-type access
 
 ## 子网掩码
 就是用来分割子网和区分那些ip是同一个网段的，那些不是同一网段的
+子网掩码转为二进制数， 
+16位子网掩码：255.255.0.0
+ 17位子网掩码：255.255.128.0 
+ 18位子网掩码：255.255.192.0 
+ 19位子网掩码：255.255.224.0 
+ 20位子网掩码：255.255.240.0 
+ 21位子网掩码：255.255.248.0 
+ 22位子网掩码：255.255.252.0 
+ 23位子网掩码：255.255.254.0 
+ 24位子网掩码：255.255.255.0 
+ 25位子网掩码：255.255.255.128 
+ 26位子网掩码：255.255.255.192 
+ 27位子网掩码：255.255.255.224 
+ 28位子网掩码：255.255.255.240 
+ 29位子网掩码：255.255.255.248 
+ 30位子网掩码：255.255.255.252 
+ 31位子网掩码：255.255.255.254 
+ 32位子网掩码：255.255.255.255  
 
 
 
