--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -94,6 +94,13 @@ port link-type access
  总结： IP 地址+子网掩码 确定一个网址是否在同一个网段，
  子网掩码作用：确定网络位，网络位之后就能确定确定IP是否在同一个网段。
 
+ 通信方式：
+ - 同网段：直接发送数据包
+ - 不同网段：  找中间设备，路由器转发
+
+### 网关
+
+
 
 
 
