--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -98,6 +98,14 @@ port link-type access
  - 同网段：直接发送数据包
  - 不同网段：  找中间设备，路由器转发
 
+A类：1-126 子网掩码 255.0.0.0
+B类：128-191 默认子网掩码 255.255.0.0
+C类：192-223 默认子网掩码 255.255.255.0
+D类：224-239  224.0.0.1～239.255.255.254
+E类：224-239 240.0.0.1～255.255.255.254
+
+判断一个地址能不能用：主机位不能全为0或者全为255
+
 ### 网关
 
 
