--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -121,5 +121,5 @@ nslookup www.jd.com
 
 ###  二层交换机和三层交换机
 
-二层交换机：数据转发
-三层交换机：数据交换+ 路由功能
+二层交换机：数据转发 ，只能支持同网段的访问，不支持不同网段访问
+三层交换机：数据交换+ 路由功能，支持不同网段访问
