--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -126,3 +126,7 @@ nslookup www.jd.com
 三层交换机配置不同网段，
 
 通过vlan ip做网关，实现不同vlan的路由，也就是说不同网段的vlanIP 需要配置成网关IP才能支持不同网段互相访问
+
+vlanif是一个三层逻辑端口，在二层网络中作为网关存在。
+vlan是二层概念，vlan互通需要三层通信，vlanif应被配置在这个三层网元上。
+二层交换机和三层交换机相连的端口属性要设置为Trunk且运行所有vlan通过；
